--- a/.config/hypr/configs/general.conf
+++ b/.config/hypr/configs/general.conf
@@ -59,7 +59,7 @@ misc {
   swallow_regex = ^(foot|kitty|[Aa]lacritty)$
 
   disable_hyprland_logo = true
-  # disable_splash_rendering = true
+  disable_splash_rendering = true
   force_default_wallpaper = 0
   new_window_takes_over_fullscreen = 2
   allow_session_lock_restore = true
@@ -71,12 +71,11 @@ decoration {
 
   blur {
     enabled = true
-    size = 3
+    size = 5
     passes = 4
     ignore_opacity = true
     popups = true
     new_optimizations = true
-    special = false
   }
 
   drop_shadow = true
