--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,10 +1,9 @@
 
-# ██╗  ██╗██╗   ██╗██████╗ ██████╗ ██╗      ██████╗  ██████╗██╗  ██╗
-# ██║  ██║╚██╗ ██╔╝██╔══██╗██╔══██╗██║     ██╔═══██╗██╔════╝██║ ██╔╝
-# ███████║ ╚████╔╝ ██████╔╝██████╔╝██║     ██║   ██║██║     █████╔╝
-# ██╔══██║  ╚██╔╝  ██╔═══╝ ██╔══██╗██║     ██║   ██║██║     ██╔═██╗
-# ██║  ██║   ██║   ██║     ██║  ██║███████╗╚██████╔╝╚██████╗██║  ██╗
-# ╚═╝  ╚═╝   ╚═╝   ╚═╝     ╚═╝  ╚═╝╚══════╝ ╚═════╝  ╚═════╝╚═╝  ╚═╝
+# ░█░█░█░█░█▀█░█▀▄░█░░░█▀█░█▀▀░█░█
+# ░█▀█░░█░░█▀▀░█▀▄░█░░░█░█░█░░░█▀▄
+# ░▀░▀░░▀░░▀░░░▀░▀░▀▀▀░▀▀▀░▀▀▀░▀░▀
+
+$hypr = $HOME/.config/hypr/
 
 general {
     hide_cursor = true
@@ -21,7 +20,7 @@ background {
 
 label {
   monitor =
-  text = cmd[update:1000] echo "$(song-status)"
+  text = cmd[update:1000] echo "$(player)"
   color = rgba(242, 243, 244, 0.75)
   font_size = 12
   font_family = SF Pro Text
@@ -32,7 +31,7 @@ label {
 
 label {
   monitor =
-  text = cmd[update:1000] echo "$(battery-status)"
+  text = cmd[update:1000] echo "$(battery)"
   color = rgba(242, 243, 244, 0.75)
   font_size = 14
   font_family = SF Pro Text
@@ -43,7 +42,7 @@ label {
 
 label {
   monitor =
-  text = cmd[update:1000] echo "$(network-status)"
+  text = cmd[update:1000] echo "$(network)"
   color = rgba(242, 243, 244, 0.75)
   font_size = 24
   font_family = CaskaydiaCove Nerd Font Mono
@@ -76,7 +75,7 @@ label {
 
 image {
     monitor =
-    path = $HOME/.config/hypr/images/user.png
+    path = $hypr/images/user.png
     border_color = 0xffdddddd
     border_size = 0
     size = 73
