--- a/.config/hypr/configs/colors.conf
+++ b/.config/hypr/configs/colors.conf
@@ -1,98 +1,98 @@
 
-    $background = rgb(191114)
+    $background = rgb(131318)
 
     $error = rgb(ffb4ab)
 
     $error_container = rgb(93000a)
 
-    $inverse_on_surface = rgb(372e31)
+    $inverse_on_surface = rgb(303036)
 
-    $inverse_primary = rgb(884a69)
+    $inverse_primary = rgb(585992)
 
-    $inverse_surface = rgb(eedfe3)
+    $inverse_surface = rgb(e4e1e9)
 
-    $on_background = rgb(eedfe3)
+    $on_background = rgb(e4e1e9)
 
     $on_error = rgb(690005)
 
     $on_error_container = rgb(ffdad6)
 
-    $on_primary = rgb(521d3a)
+    $on_primary = rgb(292a60)
 
-    $on_primary_container = rgb(ffd8e7)
+    $on_primary_container = rgb(e1dfff)
 
-    $on_primary_fixed = rgb(380724)
+    $on_primary_fixed = rgb(14134a)
 
-    $on_primary_fixed_variant = rgb(6d3351)
+    $on_primary_fixed_variant = rgb(404178)
 
-    $on_secondary = rgb(412a34)
+    $on_secondary = rgb(2f2f42)
 
-    $on_secondary_container = rgb(fdd9e7)
+    $on_secondary_container = rgb(e2e0f9)
 
-    $on_secondary_fixed = rgb(2a151f)
+    $on_secondary_fixed = rgb(1a1a2c)
 
-    $on_secondary_fixed_variant = rgb(59404b)
+    $on_secondary_fixed_variant = rgb(454559)
 
-    $on_surface = rgb(eedfe3)
+    $on_surface = rgb(e4e1e9)
 
-    $on_surface_variant = rgb(d4c2c8)
+    $on_surface_variant = rgb(c8c5d0)
 
-    $on_tertiary = rgb(4a2810)
+    $on_tertiary = rgb(46263a)
 
-    $on_tertiary_container = rgb(ffdbc7)
+    $on_tertiary_container = rgb(ffd8ec)
 
-    $on_tertiary_fixed = rgb(301401)
+    $on_tertiary_fixed = rgb(2e1124)
 
-    $on_tertiary_fixed_variant = rgb(643e24)
+    $on_tertiary_fixed_variant = rgb(5f3c51)
 
-    $outline = rgb(9d8d92)
+    $outline = rgb(918f9a)
 
-    $outline_variant = rgb(504348)
+    $outline_variant = rgb(47464f)
 
-    $primary = rgb(fdb0d3)
+    $primary = rgb(c1c1ff)
 
-    $primary_container = rgb(6d3351)
+    $primary_container = rgb(404178)
 
-    $primary_fixed = rgb(ffd8e7)
+    $primary_fixed = rgb(e1dfff)
 
-    $primary_fixed_dim = rgb(fdb0d3)
+    $primary_fixed_dim = rgb(c1c1ff)
 
     $scrim = rgb(000000)
 
-    $secondary = rgb(e0bdcb)
+    $secondary = rgb(c6c4dd)
 
-    $secondary_container = rgb(5b424d)
+    $secondary_container = rgb(47475b)
 
-    $secondary_fixed = rgb(fdd9e7)
+    $secondary_fixed = rgb(e2e0f9)
 
-    $secondary_fixed_dim = rgb(e0bdcb)
+    $secondary_fixed_dim = rgb(c6c4dd)
 
     $shadow = rgb(000000)
 
-    $source_color = rgb(74415a)
+    $source_color = rgb(3d3d52)
 
-    $surface = rgb(191114)
+    $surface = rgb(131318)
 
-    $surface_bright = rgb(40373a)
+    $surface_bright = rgb(39383f)
 
-    $surface_container = rgb(251d21)
+    $surface_container = rgb(1f1f25)
 
-    $surface_container_high = rgb(30282b)
+    $surface_container_high = rgb(2a292f)
 
-    $surface_container_highest = rgb(3b3236)
+    $surface_container_highest = rgb(35343a)
 
-    $surface_container_low = rgb(21191d)
+    $surface_container_low = rgb(1b1b21)
 
-    $surface_container_lowest = rgb(130c0f)
+    $surface_container_lowest = rgb(0e0e13)
 
-    $surface_dim = rgb(191114)
+    $surface_dim = rgb(131318)
 
-    $surface_variant = rgb(504348)
+    $surface_variant = rgb(47464f)
 
-    $tertiary = rgb(f2bb99)
+    $tertiary = rgb(e9b9d3)
 
-    $tertiary_container = rgb(643e24)
+    $tertiary_container = rgb(5f3c51)
 
-    $tertiary_fixed = rgb(ffdbc7)
+    $tertiary_fixed = rgb(ffd8ec)
 
-    $tertiary_fixed_dim = rgb(f2bb99)
+    $tertiary_fixed_dim = rgb(e9b9d3)
