--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -2,9 +2,12 @@ import = [
     "~/.config/alacritty/themes/colors.toml"
 ]
 
+[env]
+TERM = "xterm-256color"
+
 [window]
 dimensions = { columns = 100, lines = 80 }
-padding = { x = 12, y = 8 }
+padding = { x = 10, y = 8 }
 opacity = 0.8
 blur = true
 
