--- a/.config/hypr/configs/colors.conf
+++ b/.config/hypr/configs/colors.conf
@@ -1,98 +1,98 @@
 
-    $background = rgb(131318)
+    $background = rgb(1a110f)
 
     $error = rgb(ffb4ab)
 
     $error_container = rgb(93000a)
 
-    $inverse_on_surface = rgb(303036)
+    $inverse_on_surface = rgb(392e2b)
 
-    $inverse_primary = rgb(585992)
+    $inverse_primary = rgb(8f4c36)
 
-    $inverse_surface = rgb(e4e1e9)
+    $inverse_surface = rgb(f1dfda)
 
-    $on_background = rgb(e4e1e9)
+    $on_background = rgb(f1dfda)
 
     $on_error = rgb(690005)
 
     $on_error_container = rgb(ffdad6)
 
-    $on_primary = rgb(292a60)
+    $on_primary = rgb(55200d)
 
-    $on_primary_container = rgb(e1dfff)
+    $on_primary_container = rgb(ffdbd0)
 
-    $on_primary_fixed = rgb(14134a)
+    $on_primary_fixed = rgb(390b00)
 
-    $on_primary_fixed_variant = rgb(404178)
+    $on_primary_fixed_variant = rgb(723521)
 
-    $on_secondary = rgb(2f2f42)
+    $on_secondary = rgb(442a21)
 
-    $on_secondary_container = rgb(e2e0f9)
+    $on_secondary_container = rgb(ffdbd0)
 
-    $on_secondary_fixed = rgb(1a1a2c)
+    $on_secondary_fixed = rgb(2c160e)
 
-    $on_secondary_fixed_variant = rgb(454559)
+    $on_secondary_fixed_variant = rgb(5d4036)
 
-    $on_surface = rgb(e4e1e9)
+    $on_surface = rgb(f1dfda)
 
-    $on_surface_variant = rgb(c8c5d0)
+    $on_surface_variant = rgb(d8c2bc)
 
-    $on_tertiary = rgb(46263a)
+    $on_tertiary = rgb(3a3005)
 
-    $on_tertiary_container = rgb(ffd8ec)
+    $on_tertiary_container = rgb(f4e2a7)
 
-    $on_tertiary_fixed = rgb(2e1124)
+    $on_tertiary_fixed = rgb(221b00)
 
-    $on_tertiary_fixed_variant = rgb(5f3c51)
+    $on_tertiary_fixed_variant = rgb(52461a)
 
-    $outline = rgb(918f9a)
+    $outline = rgb(a08d87)
 
-    $outline_variant = rgb(47464f)
+    $outline_variant = rgb(53433f)
 
-    $primary = rgb(c1c1ff)
+    $primary = rgb(ffb59d)
 
-    $primary_container = rgb(404178)
+    $primary_container = rgb(723521)
 
-    $primary_fixed = rgb(e1dfff)
+    $primary_fixed = rgb(ffdbd0)
 
-    $primary_fixed_dim = rgb(c1c1ff)
+    $primary_fixed_dim = rgb(ffb59d)
 
     $scrim = rgb(000000)
 
-    $secondary = rgb(c6c4dd)
+    $secondary = rgb(e7bdb1)
 
-    $secondary_container = rgb(47475b)
+    $secondary_container = rgb(604239)
 
-    $secondary_fixed = rgb(e2e0f9)
+    $secondary_fixed = rgb(ffdbd0)
 
-    $secondary_fixed_dim = rgb(c6c4dd)
+    $secondary_fixed_dim = rgb(e7bdb1)
 
     $shadow = rgb(000000)
 
-    $source_color = rgb(3d3d52)
+    $source_color = rgb(f25f2b)
 
-    $surface = rgb(131318)
+    $surface = rgb(1a110f)
 
-    $surface_bright = rgb(39383f)
+    $surface_bright = rgb(423733)
 
-    $surface_container = rgb(1f1f25)
+    $surface_container = rgb(271d1b)
 
-    $surface_container_high = rgb(2a292f)
+    $surface_container_high = rgb(322825)
 
-    $surface_container_highest = rgb(35343a)
+    $surface_container_highest = rgb(3d322f)
 
-    $surface_container_low = rgb(1b1b21)
+    $surface_container_low = rgb(231917)
 
-    $surface_container_lowest = rgb(0e0e13)
+    $surface_container_lowest = rgb(140c0a)
 
-    $surface_dim = rgb(131318)
+    $surface_dim = rgb(1a110f)
 
-    $surface_variant = rgb(47464f)
+    $surface_variant = rgb(53433f)
 
-    $tertiary = rgb(e9b9d3)
+    $tertiary = rgb(d7c68d)
 
-    $tertiary_container = rgb(5f3c51)
+    $tertiary_container = rgb(52461a)
 
-    $tertiary_fixed = rgb(ffd8ec)
+    $tertiary_fixed = rgb(f4e2a7)
 
-    $tertiary_fixed_dim = rgb(e9b9d3)
+    $tertiary_fixed_dim = rgb(d7c68d)
