--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -20,11 +20,11 @@ background {
 
 label {
   monitor =
-  text = cmd[update:1000] echo "$(player)"
+  text = cmd[update:1000] echo "$(player --lockscreen)"
   color = rgba(242, 243, 244, 0.75)
   font_size = 12
   font_family = SF Pro Text
-  position = 10, 365
+  position = 15, 365
   halign = left
   valign = center
 }
@@ -35,7 +35,7 @@ label {
   color = rgba(242, 243, 244, 0.75)
   font_size = 14
   font_family = SF Pro Text
-  position = -50, 365
+  position = -54, 365
   halign = right
   valign = center
 }
@@ -46,7 +46,7 @@ label {
   color = rgba(242, 243, 244, 0.75)
   font_size = 24
   font_family = CaskaydiaCove Nerd Font Mono
-  position = -10, 365
+  position = -15, 365
   halign = right
   valign = center
 }
@@ -57,7 +57,7 @@ label {
   color = rgba(242, 243, 244, 0.75)
   font_size = 20
   font_family = SF Pro Display Bold
-  position = 0, 270
+  position = 0, 285
   halign = center
   valign = center
 }
@@ -112,7 +112,7 @@ label {
 
 input-field {
     monitor =
-    size = 160, 30
+    size = 140, 30
     outline_thickness = 0
     dots_size = 0.25
     dots_spacing = 0.55
