--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -31,7 +31,7 @@ label {
 
 label {
   monitor =
-  text = cmd[update:1000] echo "$(battery)"
+  text = cmd[update:1000] echo "$(battery --lockscreen)"
   color = rgba(242, 243, 244, 0.75)
   font_size = 14
   font_family = SF Pro Text
