--- a/.config/hypr/configs/colors.conf
+++ b/.config/hypr/configs/colors.conf
@@ -1,98 +1,98 @@
 
-    $background = rgb(1a110f)
+    $background = rgb(19120c)
 
     $error = rgb(ffb4ab)
 
     $error_container = rgb(93000a)
 
-    $inverse_on_surface = rgb(392e2b)
+    $inverse_on_surface = rgb(372f28)
 
-    $inverse_primary = rgb(8f4c36)
+    $inverse_primary = rgb(865319)
 
-    $inverse_surface = rgb(f1dfda)
+    $inverse_surface = rgb(efe0d5)
 
-    $on_background = rgb(f1dfda)
+    $on_background = rgb(efe0d5)
 
     $on_error = rgb(690005)
 
     $on_error_container = rgb(ffdad6)
 
-    $on_primary = rgb(55200d)
+    $on_primary = rgb(4a2800)
 
-    $on_primary_container = rgb(ffdbd0)
+    $on_primary_container = rgb(ffdcbf)
 
-    $on_primary_fixed = rgb(390b00)
+    $on_primary_fixed = rgb(2d1600)
 
-    $on_primary_fixed_variant = rgb(723521)
+    $on_primary_fixed_variant = rgb(6a3c01)
 
-    $on_secondary = rgb(442a21)
+    $on_secondary = rgb(412c18)
 
-    $on_secondary_container = rgb(ffdbd0)
+    $on_secondary_container = rgb(ffdcbf)
 
-    $on_secondary_fixed = rgb(2c160e)
+    $on_secondary_fixed = rgb(291806)
 
-    $on_secondary_fixed_variant = rgb(5d4036)
+    $on_secondary_fixed_variant = rgb(59422d)
 
-    $on_surface = rgb(f1dfda)
+    $on_surface = rgb(efe0d5)
 
-    $on_surface_variant = rgb(d8c2bc)
+    $on_surface_variant = rgb(d5c3b6)
 
-    $on_tertiary = rgb(3a3005)
+    $on_tertiary = rgb(2b340f)
 
-    $on_tertiary_container = rgb(f4e2a7)
+    $on_tertiary_container = rgb(dde8b4)
 
-    $on_tertiary_fixed = rgb(221b00)
+    $on_tertiary_fixed = rgb(171e00)
 
-    $on_tertiary_fixed_variant = rgb(52461a)
+    $on_tertiary_fixed_variant = rgb(414b24)
 
-    $outline = rgb(a08d87)
+    $outline = rgb(9e8e81)
 
-    $outline_variant = rgb(53433f)
+    $outline_variant = rgb(51443a)
 
-    $primary = rgb(ffb59d)
+    $primary = rgb(fdb876)
 
-    $primary_container = rgb(723521)
+    $primary_container = rgb(6a3c01)
 
-    $primary_fixed = rgb(ffdbd0)
+    $primary_fixed = rgb(ffdcbf)
 
-    $primary_fixed_dim = rgb(ffb59d)
+    $primary_fixed_dim = rgb(fdb876)
 
     $scrim = rgb(000000)
 
-    $secondary = rgb(e7bdb1)
+    $secondary = rgb(e2c0a4)
 
-    $secondary_container = rgb(604239)
+    $secondary_container = rgb(5c442f)
 
-    $secondary_fixed = rgb(ffdbd0)
+    $secondary_fixed = rgb(ffdcbf)
 
-    $secondary_fixed_dim = rgb(e7bdb1)
+    $secondary_fixed_dim = rgb(e2c0a4)
 
     $shadow = rgb(000000)
 
-    $source_color = rgb(f25f2b)
+    $source_color = rgb(b18357)
 
-    $surface = rgb(1a110f)
+    $surface = rgb(19120c)
 
-    $surface_bright = rgb(423733)
+    $surface_bright = rgb(403830)
 
-    $surface_container = rgb(271d1b)
+    $surface_container = rgb(261e18)
 
-    $surface_container_high = rgb(322825)
+    $surface_container_high = rgb(312822)
 
-    $surface_container_highest = rgb(3d322f)
+    $surface_container_highest = rgb(3c332c)
 
-    $surface_container_low = rgb(231917)
+    $surface_container_low = rgb(211a14)
 
-    $surface_container_lowest = rgb(140c0a)
+    $surface_container_lowest = rgb(130d07)
 
-    $surface_dim = rgb(1a110f)
+    $surface_dim = rgb(19120c)
 
-    $surface_variant = rgb(53433f)
+    $surface_variant = rgb(51443a)
 
-    $tertiary = rgb(d7c68d)
+    $tertiary = rgb(c1cc99)
 
-    $tertiary_container = rgb(52461a)
+    $tertiary_container = rgb(414b24)
 
-    $tertiary_fixed = rgb(f4e2a7)
+    $tertiary_fixed = rgb(dde8b4)
 
-    $tertiary_fixed_dim = rgb(d7c68d)
+    $tertiary_fixed_dim = rgb(c1cc99)
