--- a/.config/hypr/configs/colors.conf
+++ b/.config/hypr/configs/colors.conf
@@ -1,98 +1,98 @@
 
-    $background = rgb(19120c)
+    $background = rgb(191114)
 
     $error = rgb(ffb4ab)
 
     $error_container = rgb(93000a)
 
-    $inverse_on_surface = rgb(372f28)
+    $inverse_on_surface = rgb(372e31)
 
-    $inverse_primary = rgb(865319)
+    $inverse_primary = rgb(884a69)
 
-    $inverse_surface = rgb(efe0d5)
+    $inverse_surface = rgb(eedfe3)
 
-    $on_background = rgb(efe0d5)
+    $on_background = rgb(eedfe3)
 
     $on_error = rgb(690005)
 
     $on_error_container = rgb(ffdad6)
 
-    $on_primary = rgb(4a2800)
+    $on_primary = rgb(521d3a)
 
-    $on_primary_container = rgb(ffdcbf)
+    $on_primary_container = rgb(ffd8e7)
 
-    $on_primary_fixed = rgb(2d1600)
+    $on_primary_fixed = rgb(380724)
 
-    $on_primary_fixed_variant = rgb(6a3c01)
+    $on_primary_fixed_variant = rgb(6d3351)
 
-    $on_secondary = rgb(412c18)
+    $on_secondary = rgb(412a34)
 
-    $on_secondary_container = rgb(ffdcbf)
+    $on_secondary_container = rgb(fdd9e7)
 
-    $on_secondary_fixed = rgb(291806)
+    $on_secondary_fixed = rgb(2a151f)
 
-    $on_secondary_fixed_variant = rgb(59422d)
+    $on_secondary_fixed_variant = rgb(59404b)
 
-    $on_surface = rgb(efe0d5)
+    $on_surface = rgb(eedfe3)
 
-    $on_surface_variant = rgb(d5c3b6)
+    $on_surface_variant = rgb(d4c2c8)
 
-    $on_tertiary = rgb(2b340f)
+    $on_tertiary = rgb(4a2810)
 
-    $on_tertiary_container = rgb(dde8b4)
+    $on_tertiary_container = rgb(ffdbc7)
 
-    $on_tertiary_fixed = rgb(171e00)
+    $on_tertiary_fixed = rgb(301401)
 
-    $on_tertiary_fixed_variant = rgb(414b24)
+    $on_tertiary_fixed_variant = rgb(643e24)
 
-    $outline = rgb(9e8e81)
+    $outline = rgb(9d8d92)
 
-    $outline_variant = rgb(51443a)
+    $outline_variant = rgb(504348)
 
-    $primary = rgb(fdb876)
+    $primary = rgb(fdb0d3)
 
-    $primary_container = rgb(6a3c01)
+    $primary_container = rgb(6d3351)
 
-    $primary_fixed = rgb(ffdcbf)
+    $primary_fixed = rgb(ffd8e7)
 
-    $primary_fixed_dim = rgb(fdb876)
+    $primary_fixed_dim = rgb(fdb0d3)
 
     $scrim = rgb(000000)
 
-    $secondary = rgb(e2c0a4)
+    $secondary = rgb(e0bdcb)
 
-    $secondary_container = rgb(5c442f)
+    $secondary_container = rgb(5b424d)
 
-    $secondary_fixed = rgb(ffdcbf)
+    $secondary_fixed = rgb(fdd9e7)
 
-    $secondary_fixed_dim = rgb(e2c0a4)
+    $secondary_fixed_dim = rgb(e0bdcb)
 
     $shadow = rgb(000000)
 
-    $source_color = rgb(b18357)
+    $source_color = rgb(74415a)
 
-    $surface = rgb(19120c)
+    $surface = rgb(191114)
 
-    $surface_bright = rgb(403830)
+    $surface_bright = rgb(40373a)
 
-    $surface_container = rgb(261e18)
+    $surface_container = rgb(251d21)
 
-    $surface_container_high = rgb(312822)
+    $surface_container_high = rgb(30282b)
 
-    $surface_container_highest = rgb(3c332c)
+    $surface_container_highest = rgb(3b3236)
 
-    $surface_container_low = rgb(211a14)
+    $surface_container_low = rgb(21191d)
 
-    $surface_container_lowest = rgb(130d07)
+    $surface_container_lowest = rgb(130c0f)
 
-    $surface_dim = rgb(19120c)
+    $surface_dim = rgb(191114)
 
-    $surface_variant = rgb(51443a)
+    $surface_variant = rgb(504348)
 
-    $tertiary = rgb(c1cc99)
+    $tertiary = rgb(f2bb99)
 
-    $tertiary_container = rgb(414b24)
+    $tertiary_container = rgb(643e24)
 
-    $tertiary_fixed = rgb(dde8b4)
+    $tertiary_fixed = rgb(ffdbc7)
 
-    $tertiary_fixed_dim = rgb(c1cc99)
+    $tertiary_fixed_dim = rgb(f2bb99)
