--- a/.config/matugen/config.toml
+++ b/.config/matugen/config.toml
@@ -11,6 +11,8 @@ dunst = false
 
 [templates]
 hypr = { input_path = '~/.config/matugen/templates/hyprland-colors.conf', output_path = '~/.config/hypr/configs/colors.conf' }
+qt5ct = { input_path = '~/.config/matugen/templates/qt5ct-colors.conf', output_path = '~/.config/qt5ct/colors/matu.conf' }
+qt6ct = { input_path = '~/.config/matugen/templates/qt6ct-colors.conf', output_path = '~/.config/qt6ct/colors/matu.conf' }
 dunst = { input_path = '~/.config/matugen/templates/dunstrc-colors', output_path = '~/.config/dunst/dunstrc' }
 waybar = { input_path = '~/.config/matugen/templates/waybar-colors.css', output_path = '~/.config/waybar/colors.css' }
 rofi = { input_path = '~/.config/matugen/templates/rofi-colors.rasi' , output_path = '~/.config/rofi/colors.rasi' }
