--- a/.config/hypr/configs/colors.conf
+++ b/.config/hypr/configs/colors.conf
@@ -1,98 +1,98 @@
 
-    $background = rgb(191114)
+    $background = rgb(121318)
 
     $error = rgb(ffb4ab)
 
     $error_container = rgb(93000a)
 
-    $inverse_on_surface = rgb(372e31)
+    $inverse_on_surface = rgb(2f3036)
 
-    $inverse_primary = rgb(884a69)
+    $inverse_primary = rgb(4e5c92)
 
-    $inverse_surface = rgb(eedfe3)
+    $inverse_surface = rgb(e3e1e9)
 
-    $on_background = rgb(eedfe3)
+    $on_background = rgb(e3e1e9)
 
     $on_error = rgb(690005)
 
     $on_error_container = rgb(ffdad6)
 
-    $on_primary = rgb(521d3a)
+    $on_primary = rgb(1e2d61)
 
-    $on_primary_container = rgb(ffd8e7)
+    $on_primary_container = rgb(dce1ff)
 
-    $on_primary_fixed = rgb(380724)
+    $on_primary_fixed = rgb(05164b)
 
-    $on_primary_fixed_variant = rgb(6d3351)
+    $on_primary_fixed_variant = rgb(364479)
 
-    $on_secondary = rgb(412a34)
+    $on_secondary = rgb(2b3042)
 
-    $on_secondary_container = rgb(fdd9e7)
+    $on_secondary_container = rgb(dee1f9)
 
-    $on_secondary_fixed = rgb(2a151f)
+    $on_secondary_fixed = rgb(161b2c)
 
-    $on_secondary_fixed_variant = rgb(59404b)
+    $on_secondary_fixed_variant = rgb(424659)
 
-    $on_surface = rgb(eedfe3)
+    $on_surface = rgb(e3e1e9)
 
-    $on_surface_variant = rgb(d4c2c8)
+    $on_surface_variant = rgb(c6c5d0)
 
-    $on_tertiary = rgb(4a2810)
+    $on_tertiary = rgb(43273f)
 
-    $on_tertiary_container = rgb(ffdbc7)
+    $on_tertiary_container = rgb(ffd7f5)
 
-    $on_tertiary_fixed = rgb(301401)
+    $on_tertiary_fixed = rgb(2c1229)
 
-    $on_tertiary_fixed_variant = rgb(643e24)
+    $on_tertiary_fixed_variant = rgb(5c3d57)
 
-    $outline = rgb(9d8d92)
+    $outline = rgb(90909a)
 
-    $outline_variant = rgb(504348)
+    $outline_variant = rgb(45464f)
 
-    $primary = rgb(fdb0d3)
+    $primary = rgb(b7c4ff)
 
-    $primary_container = rgb(6d3351)
+    $primary_container = rgb(364479)
 
-    $primary_fixed = rgb(ffd8e7)
+    $primary_fixed = rgb(dce1ff)
 
-    $primary_fixed_dim = rgb(fdb0d3)
+    $primary_fixed_dim = rgb(b7c4ff)
 
     $scrim = rgb(000000)
 
-    $secondary = rgb(e0bdcb)
+    $secondary = rgb(c2c5dd)
 
-    $secondary_container = rgb(5b424d)
+    $secondary_container = rgb(44485b)
 
-    $secondary_fixed = rgb(fdd9e7)
+    $secondary_fixed = rgb(dee1f9)
 
-    $secondary_fixed_dim = rgb(e0bdcb)
+    $secondary_fixed_dim = rgb(c2c5dd)
 
     $shadow = rgb(000000)
 
-    $source_color = rgb(74415a)
+    $source_color = rgb(333540)
 
-    $surface = rgb(191114)
+    $surface = rgb(121318)
 
-    $surface_bright = rgb(40373a)
+    $surface_bright = rgb(38393f)
 
-    $surface_container = rgb(251d21)
+    $surface_container = rgb(1e1f25)
 
-    $surface_container_high = rgb(30282b)
+    $surface_container_high = rgb(292a2f)
 
-    $surface_container_highest = rgb(3b3236)
+    $surface_container_highest = rgb(34343a)
 
-    $surface_container_low = rgb(21191d)
+    $surface_container_low = rgb(1a1b21)
 
-    $surface_container_lowest = rgb(130c0f)
+    $surface_container_lowest = rgb(0d0e13)
 
-    $surface_dim = rgb(191114)
+    $surface_dim = rgb(121318)
 
-    $surface_variant = rgb(504348)
+    $surface_variant = rgb(45464f)
 
-    $tertiary = rgb(f2bb99)
+    $tertiary = rgb(e4bada)
 
-    $tertiary_container = rgb(643e24)
+    $tertiary_container = rgb(5c3d57)
 
-    $tertiary_fixed = rgb(ffdbc7)
+    $tertiary_fixed = rgb(ffd7f5)
 
-    $tertiary_fixed_dim = rgb(f2bb99)
+    $tertiary_fixed_dim = rgb(e4bada)
