--- a/.config/hypr/configs/rules.conf
+++ b/.config/hypr/configs/rules.conf
@@ -89,6 +89,7 @@ windowrulev2 = float,class:^(Spotify)$
 windowrulev2 = pin,title:^(Picture-in-Picture|Firefox)$
 
 windowrulev2 = size 50% 45%,title:^(neofetch|fastfetch)$
+windowrulev2 = size 524 560,title:^(System Updates)$
 windowrulev2 = size 50% 70%,title:^(Open File|Open files|Save File)$
 windowrulev2 = size 60% 70%,title:^(Save As|Save Image)$
 windowrulev2 = size 70% 65%,class:^(org.kde.dolphin)$
