--- a/.config/hypr/configs/env.conf
+++ b/.config/hypr/configs/env.conf
@@ -16,3 +16,7 @@ env = ELECTRON_OZONE_PLATFORM_HINT,wayland
 env = GDK_BACKEND,wayland
 env = WARP_ENABLE_WAYLAND,1
 env = GDK_SCALE,1
+
+# Cursor
+env = HYPRCURSOR_THEME,McMojave
+env = HYPRCURSOR_SIZE,36
