--- a/.config/qt6ct/colors/matu.conf
+++ b/.config/qt6ct/colors/matu.conf
@@ -1,5 +1,5 @@
 [ColorScheme]
-active_colors=#eedfe3, #191114, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #eedfe3, #ffffff, #eedfe3, #191114, #191114, #000000, #6d3351, #ffd8e7, #e0bdcb, #fdb0d3, #191114, #000000, #191114, #eedfe3, #e0bdcb
-disabled_colors=#eedfe3, #191114, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #eedfe3, #ffffff, #eedfe3, #191114, #191114, #000000, #6d3351, #ffd8e7, #e0bdcb, #fdb0d3, #191114, #000000, #191114, #eedfe3, #e0bdcb
-inactive_colors=#eedfe3, #191114, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #eedfe3, #ffffff, #eedfe3, #191114, #191114, #000000, #6d3351, #ffd8e7, #e0bdcb, #fdb0d3, #191114, #000000, #191114, #eedfe3, #e0bdcb
+active_colors=#e3e1e9, #121318, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #e3e1e9, #ffffff, #e3e1e9, #121318, #121318, #000000, #364479, #dce1ff, #c2c5dd, #b7c4ff, #121318, #000000, #121318, #e3e1e9, #c2c5dd
+disabled_colors=#e3e1e9, #121318, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #e3e1e9, #ffffff, #e3e1e9, #121318, #121318, #000000, #364479, #dce1ff, #c2c5dd, #b7c4ff, #121318, #000000, #121318, #e3e1e9, #c2c5dd
+inactive_colors=#e3e1e9, #121318, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #e3e1e9, #ffffff, #e3e1e9, #121318, #121318, #000000, #364479, #dce1ff, #c2c5dd, #b7c4ff, #121318, #000000, #121318, #e3e1e9, #c2c5dd
 
