--- a/.config/hypr/configs/colors.conf
+++ b/.config/hypr/configs/colors.conf
@@ -1,98 +1,98 @@
 
-    $background = rgb(121318)
+    $background = rgb(19120c)
 
     $error = rgb(ffb4ab)
 
     $error_container = rgb(93000a)
 
-    $inverse_on_surface = rgb(2f3036)
+    $inverse_on_surface = rgb(372f28)
 
-    $inverse_primary = rgb(4e5c92)
+    $inverse_primary = rgb(865319)
 
-    $inverse_surface = rgb(e3e1e9)
+    $inverse_surface = rgb(efe0d5)
 
-    $on_background = rgb(e3e1e9)
+    $on_background = rgb(efe0d5)
 
     $on_error = rgb(690005)
 
     $on_error_container = rgb(ffdad6)
 
-    $on_primary = rgb(1e2d61)
+    $on_primary = rgb(4a2800)
 
-    $on_primary_container = rgb(dce1ff)
+    $on_primary_container = rgb(ffdcbf)
 
-    $on_primary_fixed = rgb(05164b)
+    $on_primary_fixed = rgb(2d1600)
 
-    $on_primary_fixed_variant = rgb(364479)
+    $on_primary_fixed_variant = rgb(6a3c01)
 
-    $on_secondary = rgb(2b3042)
+    $on_secondary = rgb(412c18)
 
-    $on_secondary_container = rgb(dee1f9)
+    $on_secondary_container = rgb(ffdcbf)
 
-    $on_secondary_fixed = rgb(161b2c)
+    $on_secondary_fixed = rgb(291806)
 
-    $on_secondary_fixed_variant = rgb(424659)
+    $on_secondary_fixed_variant = rgb(59422d)
 
-    $on_surface = rgb(e3e1e9)
+    $on_surface = rgb(efe0d5)
 
-    $on_surface_variant = rgb(c6c5d0)
+    $on_surface_variant = rgb(d5c3b6)
 
-    $on_tertiary = rgb(43273f)
+    $on_tertiary = rgb(2b340f)
 
-    $on_tertiary_container = rgb(ffd7f5)
+    $on_tertiary_container = rgb(dde8b4)
 
-    $on_tertiary_fixed = rgb(2c1229)
+    $on_tertiary_fixed = rgb(171e00)
 
-    $on_tertiary_fixed_variant = rgb(5c3d57)
+    $on_tertiary_fixed_variant = rgb(414b24)
 
-    $outline = rgb(90909a)
+    $outline = rgb(9e8e81)
 
-    $outline_variant = rgb(45464f)
+    $outline_variant = rgb(51443a)
 
-    $primary = rgb(b7c4ff)
+    $primary = rgb(fdb876)
 
-    $primary_container = rgb(364479)
+    $primary_container = rgb(6a3c01)
 
-    $primary_fixed = rgb(dce1ff)
+    $primary_fixed = rgb(ffdcbf)
 
-    $primary_fixed_dim = rgb(b7c4ff)
+    $primary_fixed_dim = rgb(fdb876)
 
     $scrim = rgb(000000)
 
-    $secondary = rgb(c2c5dd)
+    $secondary = rgb(e2c0a4)
 
-    $secondary_container = rgb(44485b)
+    $secondary_container = rgb(5c442f)
 
-    $secondary_fixed = rgb(dee1f9)
+    $secondary_fixed = rgb(ffdcbf)
 
-    $secondary_fixed_dim = rgb(c2c5dd)
+    $secondary_fixed_dim = rgb(e2c0a4)
 
     $shadow = rgb(000000)
 
-    $source_color = rgb(333540)
+    $source_color = rgb(b18357)
 
-    $surface = rgb(121318)
+    $surface = rgb(19120c)
 
-    $surface_bright = rgb(38393f)
+    $surface_bright = rgb(403830)
 
-    $surface_container = rgb(1e1f25)
+    $surface_container = rgb(261e18)
 
-    $surface_container_high = rgb(292a2f)
+    $surface_container_high = rgb(312822)
 
-    $surface_container_highest = rgb(34343a)
+    $surface_container_highest = rgb(3c332c)
 
-    $surface_container_low = rgb(1a1b21)
+    $surface_container_low = rgb(211a14)
 
-    $surface_container_lowest = rgb(0d0e13)
+    $surface_container_lowest = rgb(130d07)
 
-    $surface_dim = rgb(121318)
+    $surface_dim = rgb(19120c)
 
-    $surface_variant = rgb(45464f)
+    $surface_variant = rgb(51443a)
 
-    $tertiary = rgb(e4bada)
+    $tertiary = rgb(c1cc99)
 
-    $tertiary_container = rgb(5c3d57)
+    $tertiary_container = rgb(414b24)
 
-    $tertiary_fixed = rgb(ffd7f5)
+    $tertiary_fixed = rgb(dde8b4)
 
-    $tertiary_fixed_dim = rgb(e4bada)
+    $tertiary_fixed_dim = rgb(c1cc99)
