--- a/.config/qt6ct/colors/matu.conf
+++ b/.config/qt6ct/colors/matu.conf
@@ -1,5 +1,5 @@
 [ColorScheme]
-active_colors=#e3e1e9, #121318, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #e3e1e9, #ffffff, #e3e1e9, #121318, #121318, #000000, #364479, #dce1ff, #c2c5dd, #b7c4ff, #121318, #000000, #121318, #e3e1e9, #c2c5dd
-disabled_colors=#e3e1e9, #121318, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #e3e1e9, #ffffff, #e3e1e9, #121318, #121318, #000000, #364479, #dce1ff, #c2c5dd, #b7c4ff, #121318, #000000, #121318, #e3e1e9, #c2c5dd
-inactive_colors=#e3e1e9, #121318, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #e3e1e9, #ffffff, #e3e1e9, #121318, #121318, #000000, #364479, #dce1ff, #c2c5dd, #b7c4ff, #121318, #000000, #121318, #e3e1e9, #c2c5dd
+active_colors=#efe0d5, #19120c, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #efe0d5, #ffffff, #efe0d5, #19120c, #19120c, #000000, #6a3c01, #ffdcbf, #e2c0a4, #fdb876, #19120c, #000000, #19120c, #efe0d5, #e2c0a4
+disabled_colors=#efe0d5, #19120c, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #efe0d5, #ffffff, #efe0d5, #19120c, #19120c, #000000, #6a3c01, #ffdcbf, #e2c0a4, #fdb876, #19120c, #000000, #19120c, #efe0d5, #e2c0a4
+inactive_colors=#efe0d5, #19120c, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #efe0d5, #ffffff, #efe0d5, #19120c, #19120c, #000000, #6a3c01, #ffdcbf, #e2c0a4, #fdb876, #19120c, #000000, #19120c, #efe0d5, #e2c0a4
 
