--- a/.config/hypr/configs/general.conf
+++ b/.config/hypr/configs/general.conf
@@ -44,6 +44,7 @@ general {
 }
 
 dwindle {
+  pseudotile = yes
   preserve_split = true
   smart_split = false
   smart_resizing = false
@@ -51,7 +52,7 @@ dwindle {
 
 misc {
   vfr = 1
-  vrr = 1
+  # vrr = 1
   focus_on_activate = true
   animate_manual_resizes = false
   animate_mouse_windowdragging = false
@@ -62,25 +63,27 @@ misc {
   disable_splash_rendering = true
   force_default_wallpaper = 0
   new_window_takes_over_fullscreen = 2
+  mouse_move_enables_dpms = yes
   allow_session_lock_restore = true
   initial_workspace_tracking = false
 }
 
 decoration {
-  rounding = 5
+  rounding = 6
 
   blur {
     enabled = true
-    size = 6
-    passes = 3
+    size = 3
+    passes = 4
     ignore_opacity = true
     popups = true
     new_optimizations = true
   }
 
   drop_shadow = true
-  shadow_range = 5
-  shadow_render_power = 5
+  shadow_ignore_window = true
+  shadow_range = 12
+  shadow_render_power = 6
   col.shadow = $background
   col.shadow_inactive = 0x50000000
 
