--- a/.config/qt6ct/colors/matu.conf
+++ b/.config/qt6ct/colors/matu.conf
@@ -1,5 +1,5 @@
 [ColorScheme]
-active_colors=#efe0d5, #19120c, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #efe0d5, #ffffff, #efe0d5, #19120c, #19120c, #000000, #6a3c01, #ffdcbf, #e2c0a4, #fdb876, #19120c, #000000, #19120c, #efe0d5, #e2c0a4
-disabled_colors=#efe0d5, #19120c, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #efe0d5, #ffffff, #efe0d5, #19120c, #19120c, #000000, #6a3c01, #ffdcbf, #e2c0a4, #fdb876, #19120c, #000000, #19120c, #efe0d5, #e2c0a4
-inactive_colors=#efe0d5, #19120c, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #efe0d5, #ffffff, #efe0d5, #19120c, #19120c, #000000, #6a3c01, #ffdcbf, #e2c0a4, #fdb876, #19120c, #000000, #19120c, #efe0d5, #e2c0a4
+active_colors=#eedfe3, #191114, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #eedfe3, #ffffff, #eedfe3, #191114, #191114, #000000, #6d3351, #ffd8e7, #e0bdcb, #fdb0d3, #191114, #000000, #191114, #eedfe3, #e0bdcb
+disabled_colors=#eedfe3, #191114, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #eedfe3, #ffffff, #eedfe3, #191114, #191114, #000000, #6d3351, #ffd8e7, #e0bdcb, #fdb0d3, #191114, #000000, #191114, #eedfe3, #e0bdcb
+inactive_colors=#eedfe3, #191114, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #eedfe3, #ffffff, #eedfe3, #191114, #191114, #000000, #6d3351, #ffd8e7, #e0bdcb, #fdb0d3, #191114, #000000, #191114, #eedfe3, #e0bdcb
 
