--- a/.config/hypr/configs/rules.conf
+++ b/.config/hypr/configs/rules.conf
@@ -88,6 +88,7 @@ windowrulev2 = float,class:^(Spotify)$
 
 windowrulev2 = pin,title:^(Picture-in-Picture|Firefox)$
 
+windowrulev2 = size 59% 78%,title:^(kitty)$
 windowrulev2 = size 50% 45%,title:^(neofetch|fastfetch)$
 windowrulev2 = size 524 560,title:^(System Updates)$
 windowrulev2 = size 50% 70%,title:^(Open File|Open files|Save File)$
