--- a/.config/qt6ct/qt6ct.conf
+++ b/.config/qt6ct/qt6ct.conf
@@ -1,5 +1,5 @@
 [Appearance]
-color_scheme_path=/home/kdot/.config/qt6ct/colors/matu.conf
+color_scheme_path=$HOME/.config/qt6ct/colors/matu.conf
 custom_palette=true
 icon_theme=Reversal-dark
 standard_dialogs=default
