--- a/.config/hypr/configs/colors.conf
+++ b/.config/hypr/configs/colors.conf
@@ -1,98 +1,98 @@
 
-    $background = rgb(0e1415)
+    $background = rgb(141218)
 
     $error = rgb(ffb4ab)
 
     $error_container = rgb(93000a)
 
-    $inverse_on_surface = rgb(2b3232)
+    $inverse_on_surface = rgb(322f35)
 
-    $inverse_primary = rgb(00696c)
+    $inverse_primary = rgb(64558f)
 
-    $inverse_surface = rgb(dde4e3)
+    $inverse_surface = rgb(e6e1e9)
 
-    $on_background = rgb(dde4e3)
+    $on_background = rgb(e6e1e9)
 
     $on_error = rgb(690005)
 
     $on_error_container = rgb(ffdad6)
 
-    $on_primary = rgb(003738)
+    $on_primary = rgb(35275d)
 
-    $on_primary_container = rgb(9cf1f3)
+    $on_primary_container = rgb(e8ddff)
 
-    $on_primary_fixed = rgb(002021)
+    $on_primary_fixed = rgb(201047)
 
-    $on_primary_fixed_variant = rgb(004f51)
+    $on_primary_fixed_variant = rgb(4c3e75)
 
-    $on_secondary = rgb(1b3435)
+    $on_secondary = rgb(332d41)
 
-    $on_secondary_container = rgb(cce8e8)
+    $on_secondary_container = rgb(e8def8)
 
-    $on_secondary_fixed = rgb(041f20)
+    $on_secondary_fixed = rgb(1e192b)
 
-    $on_secondary_fixed_variant = rgb(324b4c)
+    $on_secondary_fixed_variant = rgb(4a4458)
 
-    $on_surface = rgb(dde4e3)
+    $on_surface = rgb(e6e1e9)
 
-    $on_surface_variant = rgb(bec8c8)
+    $on_surface_variant = rgb(cac4cf)
 
-    $on_tertiary = rgb(1e314c)
+    $on_tertiary = rgb(4a2532)
 
-    $on_tertiary_container = rgb(d4e3ff)
+    $on_tertiary_container = rgb(ffd9e3)
 
-    $on_tertiary_fixed = rgb(061c36)
+    $on_tertiary_fixed = rgb(31101d)
 
-    $on_tertiary_fixed_variant = rgb(354863)
+    $on_tertiary_fixed_variant = rgb(633b49)
 
-    $outline = rgb(899393)
+    $outline = rgb(948f99)
 
-    $outline_variant = rgb(3f4949)
+    $outline_variant = rgb(49454e)
 
-    $primary = rgb(80d4d7)
+    $primary = rgb(cfbdfe)
 
-    $primary_container = rgb(004f51)
+    $primary_container = rgb(4c3e75)
 
-    $primary_fixed = rgb(9cf1f3)
+    $primary_fixed = rgb(e8ddff)
 
-    $primary_fixed_dim = rgb(80d4d7)
+    $primary_fixed_dim = rgb(cfbdfe)
 
     $scrim = rgb(000000)
 
-    $secondary = rgb(b0cccc)
+    $secondary = rgb(cbc2dc)
 
-    $secondary_container = rgb(324b4c)
+    $secondary_container = rgb(4c465a)
 
-    $secondary_fixed = rgb(cce8e8)
+    $secondary_fixed = rgb(e8def8)
 
-    $secondary_fixed_dim = rgb(b0cccc)
+    $secondary_fixed_dim = rgb(cbc2dc)
 
     $shadow = rgb(000000)
 
-    $source_color = rgb(068c8f)
+    $source_color = rgb(7a6f97)
 
-    $surface = rgb(0e1415)
+    $surface = rgb(141218)
 
-    $surface_bright = rgb(343a3a)
+    $surface_bright = rgb(3b383e)
 
-    $surface_container = rgb(1a2121)
+    $surface_container = rgb(211f24)
 
-    $surface_container_high = rgb(252b2b)
+    $surface_container_high = rgb(2b292f)
 
-    $surface_container_highest = rgb(2f3636)
+    $surface_container_highest = rgb(36343a)
 
-    $surface_container_low = rgb(161d1d)
+    $surface_container_low = rgb(1d1b20)
 
-    $surface_container_lowest = rgb(090f0f)
+    $surface_container_lowest = rgb(0f0d13)
 
-    $surface_dim = rgb(0e1415)
+    $surface_dim = rgb(141218)
 
-    $surface_variant = rgb(3f4949)
+    $surface_variant = rgb(49454e)
 
-    $tertiary = rgb(b4c8e9)
+    $tertiary = rgb(efb8c8)
 
-    $tertiary_container = rgb(354863)
+    $tertiary_container = rgb(633b49)
 
-    $tertiary_fixed = rgb(d4e3ff)
+    $tertiary_fixed = rgb(ffd9e3)
 
-    $tertiary_fixed_dim = rgb(b4c8e9)
+    $tertiary_fixed_dim = rgb(efb8c8)
