--- a/.config/hypr/configs/env.conf
+++ b/.config/hypr/configs/env.conf
@@ -3,7 +3,7 @@
 # ░█▀▀░█░█░▀▄▀
 # ░▀▀▀░▀░▀░░▀░
                            
-env = PATH,$HOME/.cargo/bin:$scripts:$PATH
+env = PATH,$scripts:$PATH
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
