--- a/.config/qt5ct/qt5ct.conf
+++ b/.config/qt5ct/qt5ct.conf
@@ -6,8 +6,8 @@ standard_dialogs=default
 style=Fusion
 
 [Fonts]
-fixed="SF Pro Display,11,-1,5,57,0,0,0,0,0,Medium"
-general="SF Pro Display,11,-1,5,57,0,0,0,0,0,Medium"
+fixed="SF Pro Display,11,-1,5,500,0,0,0,0,0,0,0,0,0,0,1,Regular"
+general="SF Pro Text,11,-1,5,500,0,0,0,0,0,0,0,0,0,0,1,Regular"
 
 [Interface]
 activate_item_on_single_click=1
