--- a/.config/qt6ct/qt6ct.conf
+++ b/.config/qt6ct/qt6ct.conf
@@ -1,13 +1,13 @@
 [Appearance]
-color_scheme_path=$HOME/.config/qt6ct/colors/matu.conf
+color_scheme_path=/home/kdot/.config/qt6ct/colors/matu.conf
 custom_palette=true
 icon_theme=Reversal-dark
 standard_dialogs=default
 style=Fusion
 
 [Fonts]
-fixed="SF Mono,12,-1,5,400,0,0,0,0,0,0,0,0,0,0,1,Regular"
-general="Cantarell,10,-1,5,400,0,0,0,0,0,0,0,0,0,0,1,Regular"
+fixed="SF Pro Display,11,-1,5,500,0,0,0,0,0,0,0,0,0,0,1,Regular"
+general="SF Pro Text,11,-1,5,500,0,0,0,0,0,0,0,0,0,0,1,Regular"
 
 [Interface]
 activate_item_on_single_click=1
@@ -25,7 +25,7 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x2\xde\0\0\x2$\0\0\0\0\0\0\0\0\0\0\x2\xde\0\0\x2$\0\0\0\0\x2\0\0\0\x5V\0\0\0\0\0\0\0\0\0\0\x2\xde\0\0\x2$)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x2\xde\0\0\x2\x32\0\0\0\0\0\0\0\0\0\0\x2\xde\0\0\x2\x32\0\0\0\0\x2\0\0\0\x5V\0\0\0\0\0\0\0\0\0\0\x2\xde\0\0\x2\x32)
 
 [Troubleshooting]
 force_raster_widgets=1
