--- a/.config/qt5ct/qt5ct.conf
+++ b/.config/qt5ct/qt5ct.conf
@@ -6,7 +6,7 @@ standard_dialogs=default
 style=Fusion
 
 [Fonts]
-fixed="SF Pro Display,11,-1,5,500,0,0,0,0,0,0,0,0,0,0,1,Regular"
+fixed="SF Mono,11,-1,5,500,0,0,0,0,0,0,0,0,0,0,1,Regular"
 general="SF Pro Text,11,-1,5,500,0,0,0,0,0,0,0,0,0,0,1,Regular"
 
 [Interface]
