--- a/.config/hypr/configs/rules.conf
+++ b/.config/hypr/configs/rules.conf
@@ -43,6 +43,8 @@ windowrulev2 = opacity 0.8,class:^(com.github.unrud.VideoDownloader)$ # VideoDow
 windowrulev2 = opacity 0.8,class:^(io.gitlab.adhami3310.Impression)$ # Impression-Gtk
 windowrulev2 = opacity 0.8,class:^(io.missioncenter.MissionCenter)$ # MissionCenter-Gtk
 windowrulev2 = opacity 0.8,class:^(io.github.flattool.Warehouse)$ # Warehouse-Gtk
+windowrulev2 = opacity 1,fullscreen, class:^(*)$
+windowrulev2 = opacity 1,fullscreen, title:^(*)$
 
 windowrulev2 = float,title:^(Open File|Open files|Save File|Save Image|Save As)$
 windowrulev2 = float,title:^(File Upload)$
