--- a/.config/qt6ct/qt6ct.conf
+++ b/.config/qt6ct/qt6ct.conf
@@ -1,13 +1,13 @@
 [Appearance]
-color_scheme_path=/home/kdot/.config/qt6ct/colors/matu.conf
+color_scheme_path=$HOME/.config/qt6ct/colors/matu.conf
 custom_palette=true
 icon_theme=Reversal-dark
 standard_dialogs=default
 style=Fusion
 
 [Fonts]
-fixed="SF Mono,11,-1,5,500,0,0,0,0,0,0,0,0,0,0,1,Regular"
-general="SF Pro Text,11,-1,5,500,0,0,0,0,0,0,0,0,0,0,1,Regular"
+fixed="SF Mono,10,-1,5,400,0,0,0,0,0,0,0,0,0,0,1,Regular"
+general="SF Pro Text,10,-1,5,400,0,0,0,0,0,0,0,0,0,0,1,Regular"
 
 [Interface]
 activate_item_on_single_click=1
