--- a/.config/hypr/configs/startup.conf
+++ b/.config/hypr/configs/startup.conf
@@ -5,15 +5,13 @@
 
 # Core
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 & udiskie &
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = dbus-update-activation-environment --all
-exec-once = sleep 1 && dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-# exec-once = hash dbus-update-activation-environment 2>/dev/null &
-exec-once = hypridle
+exec-once = hypridle &
 
 # Bar, Wallpaper
 exec-once = swww-daemon --format xrgb
-exec-once = waybar
+exec-once = waybar &
 
 # Cursor
 exec = hyprctl setcursor Notwaita-Black 28
@@ -27,6 +25,3 @@ exec-once = wl-paste --type image --watch cliphist store
 
 # Check updates
 exec-once = updates
-
-# meh
-exec-once = welcome
