--- a/.config/hypr/configs/rules.conf
+++ b/.config/hypr/configs/rules.conf
@@ -3,112 +3,104 @@
 # ░█▄█░░█░░█░█░█░█░█░█░█▄█░░░█▀▄░█░█░█░░░█▀▀░▀▀█
 # ░▀░▀░▀▀▀░▀░▀░▀▀░░▀▀▀░▀░▀░░░▀░▀░▀▀▀░▀▀▀░▀▀▀░▀▀▀
 
-windowrulev2 = opacity 0.8,class:^(firefox)$
-windowrulev2 = opacity 0.8,class:^(Brave-browser)$
-windowrulev2 = opacity 0.8,class:^(Code|code-url-handler|code-insiders-url-handler|code-oss|codium|codium-url-handler|VSCodium)$
-windowrulev2 = opacity 0.8,class:^(org.kde.dolphin)$
-windowrulev2 = opacity 0.8,class:^(org.kde.ark)$
-windowrulev2 = opacity 0.8,class:^(nwg-look)$
-windowrulev2 = opacity 0.8,class:^(qt5ct)$
-windowrulev2 = opacity 0.8,class:^(qt6ct)$
-windowrulev2 = opacity 0.8,class:^(kvantummanager)$
-windowrulev2 = opacity 0.8,class:^(pavucontrol)$
-windowrulev2 = opacity 0.8,class:^(blueman-manager)$
-windowrulev2 = opacity 0.8,class:^(nm-applet)$
-windowrulev2 = opacity 0.8,class:^(nm-connection-editor)$
-windowrulev2 = opacity 0.8,class:^(org.kde.polkit-kde-authentication-agent-1)$
-windowrulev2 = opacity 0.8,class:^(polkit-gnome-authentication-agent-1)$
-windowrulev2 = opacity 0.8,class:^(org.freedesktop.impl.portal.desktop.gtk)$
-windowrulev2 = opacity 0.8,class:^(org.freedesktop.impl.portal.desktop.hyprland)$
-windowrulev2 = opacity 0.8,class:^([Ss]team)$
-windowrulev2 = opacity 0.8,class:^(steamwebhelper)$
-windowrulev2 = opacity 0.8,class:^(Spotify)$
-windowrulev2 = opacity 0.8,initialTitle:^(Spotify Free)$
+windowrulev2 = opacity 0.9 0.6, class:^([Rr]ofi)$
+windowrulev2 = opacity 0.9 0.7, class:^(Brave-browser(-beta|-dev)?)$
+windowrulev2 = opacity 0.9 0.7, class:^([Ff]irefox|org.mozilla.firefox|[Ff]irefox-esr)$
+windowrulev2 = opacity 0.9 0.6, class:^([Tt]horium-browser)$
+windowrulev2 = opacity 0.9 0.8, class:^([Mm]icrosoft-edge(-stable|-beta|-dev|-unstable)?)$
+windowrulev2 = opacity 0.9 0.8, class:^(google-chrome(-beta|-dev|-unstable)?)$
+windowrulev2 = opacity 0.9 0.8, class:^(Code|code-url-handler|code-insiders-url-handler|code-oss|codium|codium-url-handler|VSCodium)$
+windowrulev2 = opacity 0.94 0.86, class:^(chrome-.+-Default)$ # Chrome PWAs
+windowrulev2 = opacity 0.9 0.8, class:^([Tt]hunar)$
+windowrulev2 = opacity 0.9 0.8, class:^(org.gnome.Nautilus)$
+windowrulev2 = opacity 0.9 0.8, class:^(org.kde.dolphin|org.kde.ark)$
+windowrulev2 = opacity 0.8 0.6, class:^(pcmanfm-qt)$
+windowrulev2 = opacity 0.8 0.7, class:^(gedit|org.gnome.TextEditor)$
+windowrulev2 = opacity 0.9 0.8, class:^(deluge)$
+windowrulev2 = opacity 0.9 0.7, class:^(mousepad)$
+windowrulev2 = opacity 0.9 0.8, class:^(nwg-look|qt5ct|qt6ct|yad)$
+windowrulev2 = opacity 0.9 0.8, class:^(kvantummanager)$
+windowrulev2 = opacity 0.9 0.7, class:^(com.obsproject.Studio)$
+windowrulev2 = opacity 0.9 0.7, class:^([Aa]udacious)$
+windowrulev2 = opacity 0.9 0.8, class:^(jetbrains-.+)$ # JetBrains IDEs
+windowrulev2 = opacity 0.9 0.8, class:^(com.github.rafostar.Clapper)$ # Clapper-Gtk
+windowrulev2 = opacity 0.9 0.8, class:^(com.github.tchx84.Flatseal)$ # Flatseal-Gtk
+windowrulev2 = opacity 0.9 0.8, class:^(hu.kramo.Cartridges)$ # Cartridges-Gtk
+windowrulev2 = opacity 0.94 0.86, class:^([Dd]iscord|[Vv]esktop|WebCord|ArmCord)$
+windowrulev2 = opacity 0.9 0.8, class:^(org.telegram.desktop|io.github.tdesktop_x64.TDesktop)$
+windowrulev2 = opacity 0.9 0.8, class:^(gnome-boxes)$ # Boxes-Gtk
+windowrulev2 = opacity 0.94 0.86, class:^(gnome-disks|evince|wihotspot-gui|org.gnome.baobab)$
+windowrulev2 = opacity 0.9 0.8, class:^(file-roller|org.gnome.FileRoller)$ # archive manager
+windowrulev2 = opacity 0.8 0.7, class:^(app.drey.Warp)$ # Warp file transfer
+windowrulev2 = opacity 0.9 0.8, class:^(net.davidotek.pupgui2)$ # ProtonUp-Qt
+windowrulev2 = opacity 0.9 0.8, class:^(seahorse)$ # gnome-keyring gui
+windowrulev2 = opacity 0.82 0.75, class:^(gnome-system-monitor|org.gnome.SystemMonitor)$
+windowrulev2 = opacity 0.9 0.7, class:^([Ww]hatsapp-for-linux)$
+windowrulev2 = opacity 0.9 0.7, class:^([Ff]erdium)$
+windowrulev2 = opacity 0.9 0.8, class:^(Spotify)$
+windowrulev2 = opacity 0.9 0.8, initialTitle:^(Spotify Free)$
+windowrulev2 = opacity 0.8 0.9, class:^([Ss]team|steamwebhelper)$
+windowrulev2 = opacity 0.9 0.8, class:^(org.pulseaudio.pavucontrol)$
+windowrulev2 = opacity 0.9 0.8, class:^(blueman-manager)$
+windowrulev2 = opacity 0.9 0.8, class:^(nm-applet)$
+windowrulev2 = opacity 0.9 0.8, class:^(nm-connection-editor)$
+windowrulev2 = opacity 0.9 0.8, class:^(xdg-desktop-portal-gtk)$
+windowrulev2 = opacity 0.9 0.8, class:^(org.kde.polkit-kde-authentication-agent-1)$
+windowrulev2 = opacity 0.9 0.8, class:^(polkit-gnome-authentication-agent-1)$
+windowrulev2 = opacity 0.9 0.8, class:^(org.freedesktop.impl.portal.desktop.gtk)$
+windowrulev2 = opacity 0.9 0.8, class:^(org.freedesktop.impl.portal.desktop.hyprland)$
+windowrulev2 = opacity 1, title:^(Picture-in-Picture)$
+windowrulev2 = opacity 1, fullscreen:1
 
-windowrulev2 = opacity 0.8,class:^(com.github.rafostar.Clapper)$ # Clapper-Gtk
-windowrulev2 = opacity 0.8,class:^(com.github.tchx84.Flatseal)$ # Flatseal-Gtk
-windowrulev2 = opacity 0.8,class:^(hu.kramo.Cartridges)$ # Cartridges-Gtk
-windowrulev2 = opacity 0.8,class:^(com.obsproject.Studio)$ # Obs-Qt
-windowrulev2 = opacity 0.8,class:^(gnome-boxes)$ # Boxes-Gtk
-windowrulev2 = opacity 0.8,class:^(discord)$ # Discord-Electron
-windowrulev2 = opacity 0.8,class:^(WebCord)$ # WebCord-Electron
-windowrulev2 = opacity 0.8,class:^(ArmCord)$ # ArmCord-Electron
-windowrulev2 = opacity 0.8,class:^(app.drey.Warp)$ # Warp-Gtk
-windowrulev2 = opacity 0.8,class:^(net.davidotek.pupgui2)$ # ProtonUp-Qt
-windowrulev2 = opacity 0.8,class:^(yad)$ # Protontricks-Gtk
-windowrulev2 = opacity 0.8,class:^(Signal)$ # Signal-Gtk
-windowrulev2 = opacity 0.8,class:^(io.github.alainm23.planify)$ # planify-Gtk
-windowrulev2 = opacity 0.8,class:^(io.gitlab.theevilskeleton.Upscaler)$ # Upscaler-Gtk
-windowrulev2 = opacity 0.8,class:^(com.github.unrud.VideoDownloader)$ # VideoDownloader-Gtk
-windowrulev2 = opacity 0.8,class:^(io.gitlab.adhami3310.Impression)$ # Impression-Gtk
-windowrulev2 = opacity 0.8,class:^(io.missioncenter.MissionCenter)$ # MissionCenter-Gtk
-windowrulev2 = opacity 0.8,class:^(io.github.flattool.Warehouse)$ # Warehouse-Gtk
-windowrulev2 = opacity 1,fullscreen:1
+windowrulev2 = float, title:^(Open File|Open files|Save File|Save Image|Save As|File Upload)$
+windowrulev2 = float, class:^(org.kde.dolphin)$
+windowrulev2 = float, class:^(org.kde.ark)$
+windowrulev2 = float, class:^(firefox)$,title:^(Picture-in-Picture|Library|Firefox - Choose User Profile)$
+windowrulev2 = float, class:^([Aa]lacritty|kitty)$
+windowrulev2 = float, class:^(kitty)$,title:^(top|btop|htop)$
+windowrulev2 = float, class:^(vlc)$
+windowrulev2 = float, class:^(kvantummanager)$
+windowrulev2 = float, class:^(qt5ct|qt6ct|nwg-look)$
+windowrulev2 = float, class:^(blueman-manager|nm-applet|nm-connection-editor)$
+windowrulev2 = float, class:^(org.kde.polkit-kde-authentication-agent-1)$
+windowrulev2 = float, class:^(org.pulseaudio.pavucontrol)$
+windowrulev2 = float, class:^(Code|code-url-handler|code-insiders-url-handler|code-oss|codium|codium-url-handler|VSCodium), title:(Add Folder to Workspace)
+windowrulev2 = float, class:^(Signal)$ # Signal-Gtk
+windowrulev2 = float, class:^(com.github.rafostar.Clapper)$ # Clapper-Gtk
+windowrulev2 = float, class:^(app.drey.Warp)$ # Warp-Gtk
+windowrulev2 = float, class:^(net.davidotek.pupgui2)$ # ProtonUp-Qt
+windowrulev2 = float, class:^(yad)$ # Protontricks-Gtk
+windowrulev2 = float, class:^(eog)$ # Imageviewer-Gtk
+windowrulev2 = float, class:^(io.github.alainm23.planify)$ # planify-Gtk
+windowrulev2 = float, class:^(io.gitlab.theevilskeleton.Upscaler)$ # Upscaler-Gtk
+windowrulev2 = float, class:^(com.github.unrud.VideoDownloader)$ # VideoDownloader-Gkk
+windowrulev2 = float, class:^(io.gitlab.adhami3310.Impression)$ # Impression-Gtk
+windowrulev2 = float, class:^(io.missioncenter.MissionCenter)$ # MissionCenter-Gtk
+windowrulev2 = float, class:^([Ss]team)$,title:^(Friends List|Special Offers)$
+windowrulev2 = float, class:^(discord|WebCord|ArmCord)$
+windowrulev2 = float, class:^(Spotify)$
 
-windowrulev2 = float,title:^(Open File|Open files|Save File|Save Image|Save As)$
-windowrulev2 = float,title:^(File Upload)$
-windowrulev2 = float,class:^(org.kde.dolphin)$
-windowrulev2 = float,class:^(org.kde.dolphin)$,title:^(Progress Dialog — Dolphin)$
-windowrulev2 = float,class:^(org.kde.dolphin)$,title:^(Copying — Dolphin)$
-windowrulev2 = float,class:^(org.kde.dolphin)$,title:^(Delete Permanently — Dolphin)$
-windowrulev2 = float,class:^(firefox)$,title:^(Picture-in-Picture)$
-windowrulev2 = float,class:^(firefox)$,title:^(Library)$
-windowrulev2 = float,class:^(firefox)$ title:^(Firefox - Choose User Profile)$
-windowrulev2 = float,class:^([Aa]lacritty|kitty)$
-windowrulev2 = float,class:^(kitty)$,title:^(top)$
-windowrulev2 = float,class:^(kitty)$,title:^(btop)$
-windowrulev2 = float,class:^(kitty)$,title:^(htop)$
-windowrulev2 = float,class:^(vlc)$
-windowrulev2 = float,class:^(kvantummanager)$
-windowrulev2 = float,class:^(qt5ct)$
-windowrulev2 = float,class:^(qt6ct)$
-windowrulev2 = float,class:^(nwg-look)$
-windowrulev2 = float,class:^(org.kde.ark)$
-windowrulev2 = float,class:^(pavucontrol)$
-windowrulev2 = float,class:^(blueman-manager)$
-windowrulev2 = float,class:^(nm-applet)$
-windowrulev2 = float,class:^(nm-connection-editor)$
-windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$
-windowrulev2 = float,class:^(org.pulseaudio.pavucontrol)$
-windowrulev2 = float,class:^(Code|code-url-handler|code-insiders-url-handler|code-oss|codium|codium-url-handler|VSCodium),title:(Add Folder to Workspace)
-windowrulev2 = float,class:^(Signal)$ # Signal-Gtk
-windowrulev2 = float,class:^(com.github.rafostar.Clapper)$ # Clapper-Gtk
-windowrulev2 = float,class:^(app.drey.Warp)$ # Warp-Gtk
-windowrulev2 = float,class:^(net.davidotek.pupgui2)$ # ProtonUp-Qt
-windowrulev2 = float,class:^(yad)$ # Protontricks-Gtk
-windowrulev2 = float,class:^(eog)$ # Imageviewer-Gtk
-windowrulev2 = float,class:^(io.github.alainm23.planify)$ # planify-Gtk
-windowrulev2 = float,class:^(io.gitlab.theevilskeleton.Upscaler)$ # Upscaler-Gtk
-windowrulev2 = float,class:^(com.github.unrud.VideoDownloader)$ # VideoDownloader-Gkk
-windowrulev2 = float,class:^(io.gitlab.adhami3310.Impression)$ # Impression-Gtk
-windowrulev2 = float,class:^(io.missioncenter.MissionCenter)$ # MissionCenter-Gtk
-windowrulev2 = float,class:^([Ss]team)$,title:^(Friends List)$
-windowrulev2 = float,class:^([Ss]team)$,title:^(Special Offers)$
-windowrulev2 = float,class:^(discord|WebCord)$
-windowrulev2 = float,class:^(Spotify)$
+windowrulev2 = size 59% 78%, title:^(kitty)$
+windowrulev2 = size 50% 45%, title:^(neofetch|fastfetch)$
+windowrulev2 = size 524 560, title:^(System Updates)$
+windowrulev2 = size 50% 70%, title:^(Open File|Open files|Save File)$
+windowrulev2 = size 60% 70%, title:^(Save As|Save Image)$
+windowrulev2 = size 40%,title:^(Picture-in-Picture)$
+windowrulev2 = size 70% 65%, class:^(org.kde.dolphin)$
+windowrulev2 = size 40% 50%, class:^(firefox)$, title:^(Firefox - Choose User Profile)$
+windowrulev2 = size 60% 80%, class:^(Spotify)$
+windowrulev2 = size 75% 85%, class:^(discord|WebCord)$
+windowrulev2 = size 40% 55%, class:^([Ss]team)$, title:^(Friends List)$
+windowrulev2 = size 35% 90%, class:^([Ss]team)$, title:^(Special Offers)$
+windowrulev2 = minsize 1 1, class:^([Ss]team)$
 
-windowrulev2 = pin,title:^(Picture-in-Picture|Firefox)$
-
-windowrulev2 = size 59% 78%,title:^(kitty)$
-windowrulev2 = size 50% 45%,title:^(neofetch|fastfetch)$
-windowrulev2 = size 524 560,title:^(System Updates)$
-windowrulev2 = size 50% 70%,title:^(Open File|Open files|Save File)$
-windowrulev2 = size 60% 70%,title:^(Save As|Save Image)$
-windowrulev2 = size 70% 65%,class:^(org.kde.dolphin)$
-windowrulev2 = size 40% 50%,class:^(firefox)$,title:^(Firefox - Choose User Profile)$
-windowrulev2 = size 60% 80%,class:^(Spotify)$
-windowrulev2 = size 75% 85%,class:^(discord|WebCord)$
-windowrulev2 = size 40% 55%,class:^([Ss]team)$,title:^(Friends List)$
-windowrulev2 = size 35% 90%,class:^([Ss]team)$,title:^(Special Offers)$
+windowrulev2 = pin, title:^(Picture-in-Picture|Firefox)$
 
 windowrulev2 = center,title:^(neofetch|fastfetch)$
-windowrulev2 = center 1,title:^(Open File|Save File|Save As|Save Image)$
-windowrulev2 = center 1,class:^(discord|WebCord)$
-windowrulev2 = center 1,class:^(Spotify)$
-windowrulev2 = center 1,class:^(steam)$,title:^(Special Offers)$
-windowrulev2 = center 1,class:^(steam)$,title:^(Friends List)$
-
-windowrulev2 = minsize 1 1, class:^([Ss]team)$
+windowrulev2 = center 1, title:^(Open File|Save File|Save As|Save Image)$
+windowrulev2 = center 1, class:^(discord|WebCord|ArmCord)$
+windowrulev2 = center 1, class:^(Spotify)$
+windowrulev2 = center 1, class:^(steam)$, title:^(Special Offers|Friends List)$
 
 # Prevent sleeping within fullscreen apps
 windowrulev2 = idleinhibit fullscreen, class:^(*)$
