--- a/.config/hypr/configs/rules.conf
+++ b/.config/hypr/configs/rules.conf
@@ -37,8 +37,7 @@ windowrulev2 = opacity 0.9 0.8, class:^(seahorse)$ # gnome-keyring gui
 windowrulev2 = opacity 0.82 0.75, class:^(gnome-system-monitor|org.gnome.SystemMonitor)$
 windowrulev2 = opacity 0.9 0.7, class:^([Ww]hatsapp-for-linux)$
 windowrulev2 = opacity 0.9 0.7, class:^([Ff]erdium)$
-windowrulev2 = opacity 0.9 0.8, class:^(Spotify)$
-windowrulev2 = opacity 0.9 0.8, initialTitle:^(Spotify Free)$
+windowrulev2 = opacity 0.9 0.8, initialTitle:^(Spotify Free|Spotify Premium)$
 windowrulev2 = opacity 0.8 0.9, class:^([Ss]team|steamwebhelper)$
 windowrulev2 = opacity 0.9 0.8, class:^(org.pulseaudio.pavucontrol)$
 windowrulev2 = opacity 0.9 0.8, class:^(blueman-manager)$
@@ -78,7 +77,7 @@ windowrulev2 = float, class:^(io.gitlab.adhami3310.Impression)$ # Impression-Gtk
 windowrulev2 = float, class:^(io.missioncenter.MissionCenter)$ # MissionCenter-Gtk
 windowrulev2 = float, class:^([Ss]team)$,title:^(Friends List|Special Offers)$
 windowrulev2 = float, class:^(discord|WebCord|ArmCord)$
-windowrulev2 = float, class:^(Spotify)$
+windowrulev2 = float, initialTitle:^(Spotify Free|Spotify Premium)$
 
 windowrulev2 = size 59% 78%, title:^(kitty)$
 windowrulev2 = size 50% 45%, title:^(neofetch|fastfetch)$
@@ -88,7 +87,7 @@ windowrulev2 = size 60% 70%, title:^(Save As|Save Image)$
 windowrulev2 = size 40%,title:^(Picture-in-Picture)$
 windowrulev2 = size 70% 65%, class:^(org.kde.dolphin)$
 windowrulev2 = size 40% 50%, class:^(firefox)$, title:^(Firefox - Choose User Profile)$
-windowrulev2 = size 60% 80%, class:^(Spotify)$
+windowrulev2 = size 60% 80%, initialTitle:^(Spotify Free|Spotify Premium)$
 windowrulev2 = size 75% 85%, class:^(discord|WebCord)$
 windowrulev2 = size 40% 55%, class:^([Ss]team)$, title:^(Friends List)$
 windowrulev2 = size 35% 90%, class:^([Ss]team)$, title:^(Special Offers)$
@@ -99,7 +98,7 @@ windowrulev2 = pin, title:^(Picture-in-Picture|Firefox)$
 windowrulev2 = center,title:^(neofetch|fastfetch)$
 windowrulev2 = center 1, title:^(Open File|Save File|Save As|Save Image)$
 windowrulev2 = center 1, class:^(discord|WebCord|ArmCord)$
-windowrulev2 = center 1, class:^(Spotify)$
+windowrulev2 = center 1, initialTitle:^(Spotify Free|Spotify Premium)$
 windowrulev2 = center 1, class:^(steam)$, title:^(Special Offers|Friends List)$
 
 # Prevent sleeping within fullscreen apps
