--- a/.config/hypr/configs/binds.conf
+++ b/.config/hypr/configs/binds.conf
@@ -7,13 +7,13 @@
 $MOD = SUPER
 
 # Apps
-$file_manager = dolphin
 $terminal = kitty
+$filemanager = dolphin
 $browser = firefox
 
 # Shortcuts
 bind = $MOD, RETURN, exec, $terminal
-bind = $MOD, F, exec, $file_manager
+bind = $MOD, F, exec, $filemanager
 bind = $MOD, SPACE, exec, pkill rofi || rofi -show drun
 bind = $MOD SHIFT, R, exec, hyprctl reload
 bind = SHIFT $MOD , Q, exec, hyprctl dispatch exit
@@ -29,7 +29,6 @@ bind = SHIFT, Print, exec, screenshot --full
 # Volume
 bindel = , xf86audioraisevolume, exec, volume --inc
 bindel = , xf86audiolowervolume, exec, volume --dec
-bindl = , xf86AudioMicMute, exec, volume --toggle-mic
 bindl = , xf86audiomute, exec, volume --toggle
 
 # Media
@@ -55,10 +54,10 @@ bind = $MOD, S, togglesplit # dwindle
 # Move/Resize focused window
 bindm = ALT, mouse:272, movewindow
 bindm = ALT, mouse:273, resizewindow
-binde = $MOD SHIFT, left, resizeactive,-50 0
-binde = $MOD SHIFT, right, resizeactive,50 0
-binde = $MOD SHIFT, up, resizeactive,0 -50
-binde = $MOD SHIFT, down, resizeactive,0 50
+binde = $MOD SHIFT, left, resizeactive,-20 0
+binde = $MOD SHIFT, right, resizeactive,20 0
+binde = $MOD SHIFT, up, resizeactive,0 -20
+binde = $MOD SHIFT, down, resizeactive,0 20
 bind = $MOD CTRL, left, movewindow, l
 bind = $MOD CTRL, right, movewindow, r
 bind = $MOD CTRL, up, movewindow, u
