--- a/.config/hypr/configs/startup.conf
+++ b/.config/hypr/configs/startup.conf
@@ -1,27 +1,28 @@
 
 # ░█▀▀░▀█▀░█▀█░█▀▄░▀█▀░█░█░█▀█
 # ░▀▀█░░█░░█▀█░█▀▄░░█░░█░█░█▀▀
-# ░▀▀▀░░▀░░▀░▀░▀░▀░░▀░░▀▀▀░▀░░                                                          
+# ░▀▀▀░░▀░░▀░▀░▀░▀░░▀░░▀▀▀░▀░░
+
+# Bar, Wallpaper
+exec-once = waybar &
+exec-once = swww-daemon --format xrgb
 
 # Core
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 & udiskie &
+exec-once = dbus-update-activation-environment --all
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+# exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = hypridle &
-
-# Bar, Wallpaper
-exec-once = swww-daemon --format xrgb
-exec-once = waybar &
-
-# Cursor
-exec = hyprctl setcursor Notwaita-Black 28
-exec = gsettings set org.gnome.deskop.interface cursor-theme 'Notwaita-Black'
-exec = gsettings set org.gnome.desktop.interface cursor-size 28
 
 # Clipboard
 # exec-once = wl-paste --watch cliphist store
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
+
+# Cursor
+exec = hyprctl setcursor Notwaita-Black 28
+exec = gsettings set org.gnome.deskop.interface cursor-theme 'Notwaita-Black'
+exec = gsettings set org.gnome.desktop.interface cursor-size 28
 
 # Check updates
 exec-once = updates
