--- a/.config/hypr/configs/general.conf
+++ b/.config/hypr/configs/general.conf
@@ -39,7 +39,7 @@ general {
   resize_on_border = true
   no_focus_fallback = true
   layout = dwindle
-  allow_tearing = no 
+  allow_tearing = no
   resize_on_border = true
 }
 
@@ -63,7 +63,7 @@ misc {
   disable_splash_rendering = true
   force_default_wallpaper = 0
   new_window_takes_over_fullscreen = 2
-  mouse_move_enables_dpms = yes
+  mouse_move_enables_dpms = false
   allow_session_lock_restore = true
   initial_workspace_tracking = false
 }
