--- a/.config/qt5ct/qt5ct.conf
+++ b/.config/qt5ct/qt5ct.conf
@@ -7,7 +7,7 @@ style=Fusion
 
 [Fonts]
 fixed="SF Mono,10,-1,5,50,0,0,0,0,0,Regular"
-general="SF Pro Text,10,-1,5,50,0,0,0,0,0,Regular"
+general="SF Pro Display,10,-1,5,50,0,0,0,0,0,Regular"
 
 [Interface]
 activate_item_on_single_click=1
