--- a/.config/qt6ct/qt6ct.conf
+++ b/.config/qt6ct/qt6ct.conf
@@ -7,7 +7,7 @@ style=Fusion
 
 [Fonts]
 fixed="SF Mono,10,-1,5,400,0,0,0,0,0,0,0,0,0,0,1,Regular"
-general="SF Pro Text,10,-1,5,400,0,0,0,0,0,0,0,0,0,0,1,Regular"
+general="SF Pro Display,10,-1,5,400,0,0,0,0,0,0,0,0,0,0,1,Regular"
 
 [Interface]
 activate_item_on_single_click=1
