--- a/.config/xsettingsd/xsettingsd.conf
+++ b/.config/xsettingsd/xsettingsd.conf
@@ -4,6 +4,6 @@ Gtk/CursorThemeName "Notwaita-Black"
 Net/EnableEventSounds 1
 EnableInputFeedbackSounds 0
 Xft/Antialias 1
-Xft/Hinting 1
-Xft/HintStyle "hintslight"
+Xft/Hinting 0
+Xft/HintStyle "hintnone"
 Xft/RGBA "rgb"
