--- a/.config/hypr/configs/binds.conf
+++ b/.config/hypr/configs/binds.conf
@@ -32,17 +32,17 @@ bindel = , xf86audiolowervolume, exec, volume --dec
 bindl = , xf86audiomute, exec, volume --toggle
 
 # Media
-bind = , XF86AudioPlay, exec, playerctl play-pause
-bind = , XF86AudioPause, exec, playerctl play-pause
-bind = , XF86AudioNext, exec, playerctl next
-bind = , XF86AudioPrev, exec, playerctl previous
+bindl = , XF86AudioPlay, exec, playerctl play-pause
+bindl = , XF86AudioPause, exec, playerctl play-pause
+bindl = , XF86AudioNext, exec, playerctl next
+bindl = , XF86AudioPrev, exec, playerctl previous
 
 # Brightness
 binde = , xf86MonBrightnessDown, exec, brightness --dec
 binde = , xf86MonBrightnessUp, exec, brightness --inc
 
 # Lid
-bindl= , switch:off:Lid Switch, exec, systemctl suspend
+bindl = , switch:off:Lid Switch, exec, systemctl suspend
 
 # Window Management
 bind = $MOD, Q, killactive
