--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -1,10 +1,10 @@
 {
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   "logo": {
-    "source": ".config/fastfetch/ascii/arch.txt",
+    "source": "~/.config/fastfetch/ascii/pikachu.txt",
     "type": "file",
     "color": {
-      "1": "blue"
+      "1": "yellow"
     }
   },
   "display": {
