--- a/.config/hypr/configs/general.conf
+++ b/.config/hypr/configs/general.conf
@@ -8,7 +8,7 @@ xwayland {
 }
 
 input {
-  kb_layout = us,ru,latam
+  kb_layout = us,latam,ru
   repeat_delay = 250
   repeat_rate = 35
 
@@ -32,15 +32,14 @@ general {
   gaps_out = 8
   gaps_workspaces = 50
   border_size = 2
-
+  
   col.active_border = $primary $on_secondary $on_secondary $primary 90deg
   col.inactive_border = $background
+  layout = dwindle
 
   resize_on_border = true
-  no_focus_fallback = true
-  layout = dwindle
-  allow_tearing = no
-  resize_on_border = true
+  extend_border_grab_area = 15
+  hover_icon_on_border = true
 }
 
 dwindle {
@@ -51,18 +50,21 @@ dwindle {
 }
 
 misc {
-  vfr = 1
-  vrr = 1
-  focus_on_activate = true
-  animate_manual_resizes = false
-  animate_mouse_windowdragging = false
-  enable_swallow = true
-  swallow_regex = ^(foot|kitty|[Aa]lacritty)$
-
+  vfr = true
+  vrr = 0
+  disable_autoreload = true
   disable_hyprland_logo = true
   disable_splash_rendering = true
-  force_default_wallpaper = 0
-  new_window_takes_over_fullscreen = 2
+  allow_session_lock_restore = true
+  animate_manual_resizes = false
+  animate_mouse_windowdragging = false
+
+  enable_swallow = true
+  swallow_regex = ^(foot|kitty|[Aa]lacritty)$
+  
+  focus_on_activate = true
+  new_window_takes_over_fullscreen = 1
+  close_special_on_empty = true
   mouse_move_enables_dpms = false
   allow_session_lock_restore = true
   initial_workspace_tracking = false
@@ -89,6 +91,7 @@ decoration {
 
   dim_inactive = true
   dim_strength = 0.1
+	dim_around = 0.3
   dim_special = 0
 }
 
