--- a/.config/hypr/configs/rules.conf
+++ b/.config/hypr/configs/rules.conf
@@ -3,67 +3,25 @@
 # ░█▄█░░█░░█░█░█░█░█░█░█▄█░░░█▀▄░█░█░█░░░█▀▀░▀▀█
 # ░▀░▀░▀▀▀░▀░▀░▀▀░░▀▀▀░▀░▀░░░▀░▀░▀▀▀░▀▀▀░▀▀▀░▀▀▀
 
-windowrulev2 = opacity 0.9 0.6, class:^([Rr]ofi)$
-windowrulev2 = opacity 0.9 0.7, class:^(Brave-browser(-beta|-dev)?)$
-windowrulev2 = opacity 0.9 0.7, class:^([Ff]irefox|org.mozilla.firefox|[Ff]irefox-esr)$
-windowrulev2 = opacity 0.9 0.6, class:^([Tt]horium-browser)$
-windowrulev2 = opacity 0.9 0.8, class:^([Mm]icrosoft-edge(-stable|-beta|-dev|-unstable)?)$
-windowrulev2 = opacity 0.9 0.8, class:^(google-chrome(-beta|-dev|-unstable)?)$
-windowrulev2 = opacity 0.9 0.8, class:^(Code|code-url-handler|code-insiders-url-handler|code-oss|codium|codium-url-handler|VSCodium)$
-windowrulev2 = opacity 0.94 0.86, class:^(chrome-.+-Default)$ # Chrome PWAs
-windowrulev2 = opacity 0.9 0.8, class:^([Tt]hunar)$
-windowrulev2 = opacity 0.9 0.8, class:^(org.gnome.Nautilus)$
-windowrulev2 = opacity 0.9 0.8, class:^(org.kde.dolphin|org.kde.ark)$
-windowrulev2 = opacity 0.8 0.6, class:^(pcmanfm-qt)$
-windowrulev2 = opacity 0.8 0.7, class:^(gedit|org.gnome.TextEditor)$
-windowrulev2 = opacity 0.9 0.8, class:^(deluge)$
-windowrulev2 = opacity 0.9 0.7, class:^(mousepad)$
-windowrulev2 = opacity 0.9 0.8, class:^(nwg-look|qt5ct|qt6ct|yad)$
-windowrulev2 = opacity 0.9 0.8, class:^(kvantummanager)$
-windowrulev2 = opacity 0.9 0.7, class:^(com.obsproject.Studio)$
-windowrulev2 = opacity 0.9 0.7, class:^([Aa]udacious)$
-windowrulev2 = opacity 0.9 0.8, class:^(jetbrains-.+)$ # JetBrains IDEs
-windowrulev2 = opacity 0.9 0.8, class:^(com.github.rafostar.Clapper)$ # Clapper-Gtk
-windowrulev2 = opacity 0.9 0.8, class:^(com.github.tchx84.Flatseal)$ # Flatseal-Gtk
-windowrulev2 = opacity 0.9 0.8, class:^(hu.kramo.Cartridges)$ # Cartridges-Gtk
-windowrulev2 = opacity 0.94 0.86, class:^([Dd]iscord|[Vv]esktop|WebCord|ArmCord)$
-windowrulev2 = opacity 0.9 0.8, class:^(org.telegram.desktop|io.github.tdesktop_x64.TDesktop)$
-windowrulev2 = opacity 0.9 0.8, class:^(gnome-boxes)$ # Boxes-Gtk
-windowrulev2 = opacity 0.94 0.86, class:^(gnome-disks|evince|wihotspot-gui|org.gnome.baobab)$
-windowrulev2 = opacity 0.9 0.8, class:^(file-roller|org.gnome.FileRoller)$ # archive manager
-windowrulev2 = opacity 0.8 0.7, class:^(app.drey.Warp)$ # Warp file transfer
-windowrulev2 = opacity 0.9 0.8, class:^(net.davidotek.pupgui2)$ # ProtonUp-Qt
-windowrulev2 = opacity 0.9 0.8, class:^(seahorse)$ # gnome-keyring gui
-windowrulev2 = opacity 0.82 0.75, class:^(gnome-system-monitor|org.gnome.SystemMonitor)$
-windowrulev2 = opacity 0.9 0.7, class:^([Ww]hatsapp-for-linux)$
-windowrulev2 = opacity 0.9 0.7, class:^([Ff]erdium)$
-windowrulev2 = opacity 0.9 0.8, initialTitle:^(Spotify Free|Spotify Premium)$
-windowrulev2 = opacity 0.8 0.9, class:^([Ss]team|steamwebhelper)$
-windowrulev2 = opacity 0.9 0.8, class:^(org.pulseaudio.pavucontrol)$
-windowrulev2 = opacity 0.9 0.8, class:^(blueman-manager)$
-windowrulev2 = opacity 0.9 0.8, class:^(nm-applet)$
-windowrulev2 = opacity 0.9 0.8, class:^(nm-connection-editor)$
-windowrulev2 = opacity 0.9 0.8, class:^(xdg-desktop-portal-gtk)$
-windowrulev2 = opacity 0.9 0.8, class:^(org.kde.polkit-kde-authentication-agent-1)$
-windowrulev2 = opacity 0.9 0.8, class:^(polkit-gnome-authentication-agent-1)$
-windowrulev2 = opacity 0.9 0.8, class:^(org.freedesktop.impl.portal.desktop.gtk)$
-windowrulev2 = opacity 0.9 0.8, class:^(org.freedesktop.impl.portal.desktop.hyprland)$
+windowrulev2 = opacity 0.9 0.8, class:(.*.*)
+windowrulev2 = opacity 1, title:(.*.png|.*.jpg|.*.jpeg|.*.webp|.*.webm|.*.mp4)
+windowrulev2 = opacity 1, title:(.* - YouTube.*)
 windowrulev2 = opacity 1, title:^(Picture-in-Picture)$
+windowrulev2 = opacity 1, class:([Aa]lacritty|kitty)
 windowrulev2 = opacity 1, fullscreen:1
 
-windowrulev2 = float, title:^(Open File|Open files|Save File|Save Image|Save As|File Upload)$
-windowrulev2 = float, class:^(org.kde.dolphin)$
-windowrulev2 = float, class:^(org.kde.ark)$
-windowrulev2 = float, class:^(firefox)$,title:^(Picture-in-Picture|Library|Firefox - Choose User Profile)$
+windowrulev2 = float, initialTitle:^(Spotify .*)$
+windowrulev2 = float, title:^(Picture-in-Picture)$
+windowrulev2 = float, title:^(Open .*|Save .*|File Upload)$
+windowrulev2 = float, class:^(org.kde.*)$
+windowrulev2 = float, class:^(firefox)$, title:^(Library|Firefox - Choose User Profile)$
 windowrulev2 = float, class:^([Aa]lacritty|kitty)$
-windowrulev2 = float, class:^(kitty)$,title:^(top|btop|htop)$
 windowrulev2 = float, class:^(vlc)$
-windowrulev2 = float, class:^(kvantummanager)$
-windowrulev2 = float, class:^(qt5ct|qt6ct|nwg-look)$
+windowrulev2 = float, class:^(kvantummanager|qt.*ct|nwg-look)$
 windowrulev2 = float, class:^(blueman-manager|nm-applet|nm-connection-editor)$
-windowrulev2 = float, class:^(org.kde.polkit-kde-authentication-agent-1)$
+windowrulev2 = float, class:^(.*-authentication-agent-1)$
 windowrulev2 = float, class:^(org.pulseaudio.pavucontrol)$
-windowrulev2 = float, class:^(Code|code-url-handler|code-insiders-url-handler|code-oss|codium|codium-url-handler|VSCodium), title:(Add Folder to Workspace)
+windowrulev2 = float, class:^(Code|code-oss|codium|.*-url-handler|VSCodium), title:^(Add Folder to Workspace)$
 windowrulev2 = float, class:^(Signal)$ # Signal-Gtk
 windowrulev2 = float, class:^(com.github.rafostar.Clapper)$ # Clapper-Gtk
 windowrulev2 = float, class:^(app.drey.Warp)$ # Warp-Gtk
@@ -75,35 +33,28 @@ windowrulev2 = float, class:^(io.gitlab.theevilskeleton.Upscaler)$ # Upscaler-Gt
 windowrulev2 = float, class:^(com.github.unrud.VideoDownloader)$ # VideoDownloader-Gkk
 windowrulev2 = float, class:^(io.gitlab.adhami3310.Impression)$ # Impression-Gtk
 windowrulev2 = float, class:^(io.missioncenter.MissionCenter)$ # MissionCenter-Gtk
-windowrulev2 = float, class:^([Ss]team)$,title:^(Friends List|Special Offers)$
-windowrulev2 = float, class:^(discord|WebCord|ArmCord)$
-windowrulev2 = float, initialTitle:^(Spotify Free|Spotify Premium)$
+windowrulev2 = float, class:^([Ss]team)$, title:^(Friends List|Special Offers)$
+windowrulev2 = float, class:^(discord|.*Cord)$
 
+windowrulev2 = center, floating:1
+
+windowrulev2 = size 60% 80%, initialTitle:^(Spotify .*)$
 windowrulev2 = size 59% 78%, title:^(kitty)$
-windowrulev2 = size 50% 45%, title:^(neofetch|fastfetch)$
+windowrulev2 = size 50% 45%, title:^(.*fetch)$
 windowrulev2 = size 524 560, title:^(System Updates)$
-windowrulev2 = size 50% 70%, title:^(Open File|Open files|Save File)$
-windowrulev2 = size 60% 70%, title:^(Save As|Save Image)$
-windowrulev2 = size 40%,title:^(Picture-in-Picture)$
+windowrulev2 = size 60% 70%, title:^(Open .*|Save .*)$
+windowrulev2 = size 40%, title:^(Picture-in-Picture)$
 windowrulev2 = size 70% 65%, class:^(org.kde.dolphin)$
 windowrulev2 = size 40% 50%, class:^(firefox)$, title:^(Firefox - Choose User Profile)$
-windowrulev2 = size 60% 80%, initialTitle:^(Spotify Free|Spotify Premium)$
 windowrulev2 = size 75% 85%, class:^(discord|WebCord)$
 windowrulev2 = size 40% 55%, class:^([Ss]team)$, title:^(Friends List)$
 windowrulev2 = size 35% 90%, class:^([Ss]team)$, title:^(Special Offers)$
-windowrulev2 = minsize 1 1, class:^([Ss]team)$
 
 windowrulev2 = pin, title:^(Picture-in-Picture|Firefox)$
 
-windowrulev2 = center,title:^(neofetch|fastfetch)$
-windowrulev2 = center 1, title:^(Open File|Save File|Save As|Save Image)$
-windowrulev2 = center 1, class:^(discord|WebCord|ArmCord)$
-windowrulev2 = center 1, initialTitle:^(Spotify Free|Spotify Premium)$
-windowrulev2 = center 1, class:^(steam)$, title:^(Special Offers|Friends List)$
-
 # Prevent sleeping within fullscreen apps
-windowrulev2 = idleinhibit fullscreen, class:^(*)$
-windowrulev2 = idleinhibit fullscreen, title:^(*)$
+windowrulev2 = idleinhibit fullscreen, class:^(.*.*)$
+windowrulev2 = idleinhibit fullscreen, title:^(.*.*)$
 windowrulev2 = idleinhibit fullscreen, fullscreen:1
 
 
@@ -111,12 +62,18 @@ windowrulev2 = idleinhibit fullscreen, fullscreen:1
 # ░█░░░█▀█░░█░░█▀▀░█▀▄░░░█▀▄░█░█░█░░░█▀▀░▀▀█
 # ░▀▀▀░▀░▀░░▀░░▀▀▀░▀░▀░░░▀░▀░▀▀▀░▀▀▀░▀▀▀░▀▀▀
 
-layerrule = blur, waybar
-layerrule = ignorezero, waybar
+blurls = waybar
+blurls = rofi
+blurls = notifications
+
 layerrule = blurpopups, waybar
 
-layerrule = blur, rofi
+layerrule = ignorezero, waybar
 layerrule = ignorezero, rofi
-layerrule = animation popin, rofi
+layerrule = ignorezero, notifications
 
+layerrule = xray 0, notifications
+
+layerrule = animation popin, rofi
+layerrule = animation slide, notifications
 layerrule = animation popin 90%, swww
