--- a/.config/gtk-4.0/settings.ini
+++ b/.config/gtk-4.0/settings.ini
@@ -1,13 +1,10 @@
 [Settings]
-gtk-theme-name=Adwaita
+gtk-application-prefer-dark-theme=1
 gtk-icon-theme-name=Reversal-dark
-gtk-font-name=SF Pro Display 11
+gtk-font-name=SF Pro Display, 11
 gtk-cursor-theme-name=Notwaita-Black
 gtk-cursor-theme-size=28
-gtk-enable-event-sounds=1
-gtk-enable-input-feedback-sounds=0
-gtk-xft-antialias=1
-gtk-xft-hinting=0
-gtk-xft-hintstyle=hintslight
-gtk-xft-rgba=rgb
-gtk-application-prefer-dark-theme=true
+gtk-decoration-layout=icon:minimize,maximize,close
+gtk-enable-animations=true
+gtk-primary-button-warps-slider=false
+gtk-hint-font-metrics=true
