--- a/.config/hypr/configs/rules.conf
+++ b/.config/hypr/configs/rules.conf
@@ -13,7 +13,7 @@ windowrulev2 = opacity 1, fullscreen:1
 windowrulev2 = float, initialTitle:^(Spotify .*)$
 windowrulev2 = float, title:^(Picture-in-Picture)$
 windowrulev2 = float, title:^(Open .*|Save .*|File Upload)$
-windowrulev2 = float, class:^(org.kde.*)$
+windowrulev2 = float, class:^(org.kde.*|org.gnome.*)$
 windowrulev2 = float, class:^(firefox)$, title:^(Library|Firefox - Choose User Profile)$
 windowrulev2 = float, class:^([Aa]lacritty|kitty)$
 windowrulev2 = float, class:^(vlc)$
