--- a/.config/hypr/configs/colors.conf
+++ b/.config/hypr/configs/colors.conf
@@ -1,98 +1,98 @@
 
-    $background = rgb(0e1415)
+    $background = rgb(1a1112)
 
     $error = rgb(ffb4ab)
 
     $error_container = rgb(93000a)
 
-    $inverse_on_surface = rgb(2b3232)
+    $inverse_on_surface = rgb(382e2e)
 
-    $inverse_primary = rgb(00696c)
+    $inverse_primary = rgb(8f4a50)
 
-    $inverse_surface = rgb(dde4e3)
+    $inverse_surface = rgb(f0dede)
 
-    $on_background = rgb(dde4e3)
+    $on_background = rgb(f0dede)
 
     $on_error = rgb(690005)
 
     $on_error_container = rgb(ffdad6)
 
-    $on_primary = rgb(003738)
+    $on_primary = rgb(561d24)
 
-    $on_primary_container = rgb(9cf1f3)
+    $on_primary_container = rgb(ffdadb)
 
-    $on_primary_fixed = rgb(002021)
+    $on_primary_fixed = rgb(3b0811)
 
-    $on_primary_fixed_variant = rgb(004f51)
+    $on_primary_fixed_variant = rgb(723339)
 
-    $on_secondary = rgb(1b3435)
+    $on_secondary = rgb(44292b)
 
-    $on_secondary_container = rgb(cce8e8)
+    $on_secondary_container = rgb(ffdadb)
 
-    $on_secondary_fixed = rgb(041f20)
+    $on_secondary_fixed = rgb(2c1517)
 
-    $on_secondary_fixed_variant = rgb(324b4c)
+    $on_secondary_fixed_variant = rgb(5c3f41)
 
-    $on_surface = rgb(dde4e3)
+    $on_surface = rgb(f0dede)
 
-    $on_surface_variant = rgb(bec8c8)
+    $on_surface_variant = rgb(d7c1c2)
 
-    $on_tertiary = rgb(1e314c)
+    $on_tertiary = rgb(432c06)
 
-    $on_tertiary_container = rgb(d4e3ff)
+    $on_tertiary_container = rgb(ffddb4)
 
-    $on_tertiary_fixed = rgb(061c36)
+    $on_tertiary_fixed = rgb(291800)
 
-    $on_tertiary_fixed_variant = rgb(354863)
+    $on_tertiary_fixed_variant = rgb(5c421a)
 
-    $outline = rgb(899393)
+    $outline = rgb(9f8c8d)
 
-    $outline_variant = rgb(3f4949)
+    $outline_variant = rgb(524344)
 
-    $primary = rgb(80d4d7)
+    $primary = rgb(ffb2b7)
 
-    $primary_container = rgb(004f51)
+    $primary_container = rgb(723339)
 
-    $primary_fixed = rgb(9cf1f3)
+    $primary_fixed = rgb(ffdadb)
 
-    $primary_fixed_dim = rgb(80d4d7)
+    $primary_fixed_dim = rgb(ffb2b7)
 
     $scrim = rgb(000000)
 
-    $secondary = rgb(b0cccc)
+    $secondary = rgb(e6bdbe)
 
-    $secondary_container = rgb(324b4c)
+    $secondary_container = rgb(5f4143)
 
-    $secondary_fixed = rgb(cce8e8)
+    $secondary_fixed = rgb(ffdadb)
 
-    $secondary_fixed_dim = rgb(b0cccc)
+    $secondary_fixed_dim = rgb(e6bdbe)
 
     $shadow = rgb(000000)
 
-    $source_color = rgb(068c8f)
+    $source_color = rgb(f8596f)
 
-    $surface = rgb(0e1415)
+    $surface = rgb(1a1112)
 
-    $surface_bright = rgb(343a3a)
+    $surface_bright = rgb(413737)
 
-    $surface_container = rgb(1a2121)
+    $surface_container = rgb(271d1e)
 
-    $surface_container_high = rgb(252b2b)
+    $surface_container_high = rgb(312828)
 
-    $surface_container_highest = rgb(2f3636)
+    $surface_container_highest = rgb(3d3233)
 
-    $surface_container_low = rgb(161d1d)
+    $surface_container_low = rgb(22191a)
 
-    $surface_container_lowest = rgb(090f0f)
+    $surface_container_lowest = rgb(140c0d)
 
-    $surface_dim = rgb(0e1415)
+    $surface_dim = rgb(1a1112)
 
-    $surface_variant = rgb(3f4949)
+    $surface_variant = rgb(524344)
 
-    $tertiary = rgb(b4c8e9)
+    $tertiary = rgb(e7c08e)
 
-    $tertiary_container = rgb(354863)
+    $tertiary_container = rgb(5c421a)
 
-    $tertiary_fixed = rgb(d4e3ff)
+    $tertiary_fixed = rgb(ffddb4)
 
-    $tertiary_fixed_dim = rgb(b4c8e9)
+    $tertiary_fixed_dim = rgb(e7c08e)
