--- a/extra/zed/settings.json
+++ b/extra/zed/settings.json
@@ -7,7 +7,7 @@
     "diagnostics": false,
     "metrics": false
   },
-  "theme": "Gruvbox Dark Soft",
+  "theme": "Ayu Dark",
   "ui_font_size": 16,
   "buffer_font_size": 16,
   "tab_size": 2,
