--- a/.config/hypr/configs/rules.conf
+++ b/.config/hypr/configs/rules.conf
@@ -4,8 +4,8 @@
 # ░▀░▀░▀▀▀░▀░▀░▀▀░░▀▀▀░▀░▀░░░▀░▀░▀▀▀░▀▀▀░▀▀▀░▀▀▀
 
 windowrulev2 = opacity 0.9 0.8, class:(.*.*)
-windowrulev2 = opacity 1, title:(.*.png|.*.jpg|.*.jpeg|.*.webp|.*.webm|.*.mp4)
-windowrulev2 = opacity 1, title:(.* - YouTube.*)
+windowrulev2 = opacity 1, title:^(.*.png|.*.jpg|.*.jpeg|.*.webp|.*.webm|.*.mp4)$
+windowrulev2 = opacity 1, title:^(.* - YouTube.*)$
 windowrulev2 = opacity 1, title:^(Picture-in-Picture)$
 windowrulev2 = opacity 1, class:([Aa]lacritty|kitty)
 windowrulev2 = opacity 1, fullscreen:1
