--- a/.config/hypr/configs/startup.conf
+++ b/.config/hypr/configs/startup.conf
@@ -13,6 +13,7 @@ exec-once = dbus-update-activation-environment --all
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 # exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = hypridle &
+exec-once = batterynotify
 
 # Clipboard
 # exec-once = wl-paste --watch cliphist store
