--- a/.config/hypr/configs/binds.conf
+++ b/.config/hypr/configs/binds.conf
@@ -29,7 +29,7 @@ bind = SHIFT, Print, exec, screenshot --full
 # Volume
 bindel = , xf86audioraisevolume, exec, volume --inc
 bindel = , xf86audiolowervolume, exec, volume --dec
-bindl = , xf86audiomute, exec, volume --toggle
+bindl = , xf86audiomute, exec, volume -m
 
 # Media
 bindl = , XF86AudioPlay, exec, playerctl play-pause
