--- a/.config/kitty/themes/colors.conf
+++ b/.config/kitty/themes/colors.conf
@@ -1,11 +1,13 @@
-cursor #f0dede
-cursor_text_color #d7c1c2
+# Generated with Matugen
 
-foreground            #f0dede
-background            #1a1112
-selection_foreground  #44292b
-selection_background  #e6bdbe
-url_color             #ffb2b7
+cursor #eedfe3
+cursor_text_color #d4c2c8
+
+foreground            #eedfe3
+background            #191114
+selection_foreground  #412a34
+selection_background  #e0bdcb
+url_color             #fdb0d3
 
 # black
 color8   #262626
@@ -25,7 +27,7 @@ color11  #c4c19e
 
 # blue
 /* color4  #8f8aac */
-color4  #ffb2b7
+color4  #fdb0d3
 color12 #a39ec4
 
 # magenta
