--- a/.config/qt6ct/colors/material.conf
+++ b/.config/qt6ct/colors/material.conf
@@ -1,5 +1,4 @@
 [ColorScheme]
-active_colors=#f0dede, #1a1112, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #f0dede, #ffffff, #f0dede, #1a1112, #1a1112, #000000, #723339, #ffdadb, #e6bdbe, #ffb2b7, #1a1112, #000000, #1a1112, #f0dede, #e6bdbe
-disabled_colors=#f0dede, #1a1112, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #f0dede, #ffffff, #f0dede, #1a1112, #1a1112, #000000, #723339, #ffdadb, #e6bdbe, #ffb2b7, #1a1112, #000000, #1a1112, #f0dede, #e6bdbe
-inactive_colors=#f0dede, #1a1112, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #f0dede, #ffffff, #f0dede, #1a1112, #1a1112, #000000, #723339, #ffdadb, #e6bdbe, #ffb2b7, #1a1112, #000000, #1a1112, #f0dede, #e6bdbe
-
+active_colors=#eedfe3, #191114, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #eedfe3, #ffffff, #eedfe3, #191114, #191114, #000000, #6d3351, #ffd8e7, #e0bdcb, #fdb0d3, #191114, #000000, #191114, #eedfe3, #e0bdcb
+disabled_colors=#eedfe3, #191114, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #eedfe3, #ffffff, #eedfe3, #191114, #191114, #000000, #6d3351, #ffd8e7, #e0bdcb, #fdb0d3, #191114, #000000, #191114, #eedfe3, #e0bdcb
+inactive_colors=#eedfe3, #191114, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #eedfe3, #ffffff, #eedfe3, #191114, #191114, #000000, #6d3351, #ffd8e7, #e0bdcb, #fdb0d3, #191114, #000000, #191114, #eedfe3, #e0bdcb
